--- a/docs/api-reference/CRMScript.NetServer.NSAIAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAIAgent.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSAIAgent.#ctor
   fullName: CRMScript.NetServer.NSAIAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: "\nInitializes a new instance of the NSAIAgent class.\n"
   remarks: 
   syntax: 
     content: NSAIAgent
