--- a/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
@@ -54,7 +54,7 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountClassId()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountClassId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAmountClassId()
@@ -74,7 +74,7 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountFrom()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountFrom()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetAmountFrom()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountTo()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountTo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetAmountTo()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSAmountClassEntity.GetCurrencyId()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetCurrencyId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nMixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.\n"
   syntax: 
     content: Integer GetCurrencyId()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSAmountClassEntity.GetDeleted()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetDeleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -154,7 +154,7 @@ items:
   nameWithType: NSAmountClassEntity.GetName()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSAmountClassEntity.GetRank()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -194,7 +194,7 @@ items:
   nameWithType: NSAmountClassEntity.GetTooltip()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountClassId(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountClassId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAmountClassId(Integer amountClassId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountFrom(Float)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom(Float)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAmountFrom(Float amountFrom)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountTo(Float)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo(Float)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAmountTo(Float amountTo)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSAmountClassEntity.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetCurrencyId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nMixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.\n"
   syntax: 
     content: Void SetCurrencyId(Integer currencyId)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSAmountClassEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetDeleted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSAmountClassEntity.SetName(String)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSAmountClassEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSAmountClassEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
