--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
@@ -90,7 +90,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetAlarmTime()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetAlarmTime()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetAlarmTime()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetAppointmentId()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetAppointmentId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAppointmentId()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetAppointmentText()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetAppointmentText()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAppointmentText()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetContactDepartment()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetContactDepartment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContactDepartment()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetContactFullName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetContactFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContactFullName()
@@ -190,7 +190,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetContactId()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetContactId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -210,7 +210,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetContactName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetContactName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -230,7 +230,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetEndDate()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetEndDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetEndDate()
@@ -250,7 +250,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetHasAlarm()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetHasAlarm()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetHasAlarm()
@@ -270,7 +270,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsAllDay()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsAllDay()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsAllDay()
@@ -290,7 +290,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsAssignment()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsAssignment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsAssignment()
@@ -310,7 +310,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsBusy()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsBusy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsBusy()
@@ -330,7 +330,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsCompleted()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsCompleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsCompleted()
@@ -350,7 +350,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsInvitation()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsInvitation()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsInvitation()
@@ -370,7 +370,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetIsTentative()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetIsTentative()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsTentative()
@@ -390,7 +390,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetLocation()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetLocation()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLocation()
@@ -410,7 +410,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetParticipants()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetParticipants()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSParticipantSyncData[] GetParticipants()
@@ -430,7 +430,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetPersonFormalName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetPersonFormalName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPersonFormalName()
@@ -450,7 +450,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetPersonFullName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetPersonFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPersonFullName()
@@ -470,7 +470,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetPersonId()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -490,7 +490,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetProjectId()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetProjectId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetProjectId()
@@ -530,7 +530,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetSaleId()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetSaleId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSaleId()
@@ -550,7 +550,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetSaleName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetSaleName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSaleName()
@@ -570,7 +570,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetStartDate()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetStartDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetStartDate()
@@ -590,7 +590,7 @@ items:
   nameWithType: NSAppointmentSyncData.GetTaskName()
   fullName: CRMScript.NetServer.NSAppointmentSyncData.GetTaskName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTaskName()
@@ -610,7 +610,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetAlarmTime(DateTime)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAlarmTime(DateTime alarmTime)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetAppointmentId(Integer)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetAppointmentId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAppointmentId(Integer appointmentId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetAppointmentText(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetAppointmentText(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAppointmentText(String appointmentText)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetContactDepartment(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetContactDepartment(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactDepartment(String contactDepartment)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetContactFullName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetContactFullName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactFullName(String contactFullName)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetContactId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetContactName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetContactName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetEndDate(DateTime)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetEndDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEndDate(DateTime endDate)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetHasAlarm(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetHasAlarm(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetHasAlarm(Bool hasAlarm)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetLocation(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetLocation(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLocation(String location)
@@ -1006,7 +1006,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetPersonFullName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetPersonFullName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonFullName(String personFullName)
@@ -1028,7 +1028,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -1050,7 +1050,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetProjectId(Integer)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetProjectId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProjectId(Integer projectId)
@@ -1072,7 +1072,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetProjectName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetProjectName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProjectName(String projectName)
@@ -1094,7 +1094,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetSaleId(Integer)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetSaleId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleId(Integer saleId)
@@ -1116,7 +1116,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetSaleName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetSaleName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleName(String saleName)
@@ -1138,7 +1138,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetStartDate(DateTime)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetStartDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStartDate(DateTime startDate)
