--- a/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSApproveRejectResponse.GetCreatedAppointmentId()
   fullName: CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCreatedAppointmentId()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSApproveRejectResponse.GetPluginResponse()
   fullName: CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSPluginResponse GetPluginResponse()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   fullName: CRMScript.NetServer.NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedAppointmentId(Integer createdAppointmentId)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
   fullName: CRMScript.NetServer.NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPluginResponse(NSPluginResponse pluginResponse)
