--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSArchiveListItem.GetColumnData()
   fullName: CRMScript.NetServer.NSArchiveListItem.GetColumnData()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nEach column data item contains a display value, a tooltip hint, a link hint, and an orderby value. The display value is encoded by the CultureDataFormatter and can be decoded / localized by that class; all other values are optional.<p></p>\nTooltip hints can be passed to the TooltipProvider (Tooltip service) to be translated into an actual tooltip.\n"
   syntax: 
     content: Map GetColumnData()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSArchiveListItem.GetEntityName()
   fullName: CRMScript.NetServer.NSArchiveListItem.GetEntityName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nAn ArchiveList may contain rows from different entities.\n"
   syntax: 
     content: String GetEntityName()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSArchiveListItem.GetLinkHint()
   fullName: CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLinkHint()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSArchiveListItem.GetPrimaryKey()
   fullName: CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPrimaryKey()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSArchiveListItem.GetStyleHint()
   fullName: CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nPresentation layers can interpret the style hints as they see fit.\n"
   syntax: 
     content: String GetStyleHint()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSArchiveListItem.SetEntityName(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetEntityName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nAn ArchiveList may contain rows from different entities.\n"
   syntax: 
     content: Void SetEntityName(String entityName)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSArchiveListItem.SetLinkHint(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetLinkHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLinkHint(String linkHint)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSArchiveListItem.SetPrimaryKey(Integer)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetPrimaryKey(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPrimaryKey(Integer primaryKey)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSArchiveListItem.SetStyleHint(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetStyleHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nPresentation layers can interpret the style hints as they see fit.\n"
   syntax: 
     content: Void SetStyleHint(String styleHint)
