--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
@@ -60,7 +60,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetColumnInfo()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetColumnInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveColumnInfo GetColumnInfo()
@@ -80,7 +80,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetDisplayValues()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetDisplayValues()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nList ID's are decoded to display texts, other values are represented in a format suitable for decoding and display through the CultureDataFormatter.\n"
   syntax: 
     content: String[] GetDisplayValues()
@@ -140,7 +140,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetIsActive()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetIsActive()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nInactive restrictions will not influence the generated query.\n"
   syntax: 
     content: Bool GetIsActive()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetName()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -219,7 +219,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetSubRestrictions()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetSubRestrictions()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveRestrictionInfo[] GetSubRestrictions()
@@ -239,7 +239,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetUniqueHash()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetUniqueHash()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUniqueHash()
@@ -259,7 +259,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetValues()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetValues()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String[] GetValues()
@@ -279,7 +279,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetColumnInfoNSArchiveColumnInfo(NSArchiveColumnInfo)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetColumnInfo(NSArchiveColumnInfo)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetColumnInfo(NSArchiveColumnInfo columnInfo)
@@ -301,7 +301,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetDisplayValues(String[])
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetDisplayValues(String[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nList IDs are decoded to display texts, other values are represented in a format suitable for decoding and display through the CultureDataFormatter.\n"
   syntax: 
     content: Void SetDisplayValues(String[] displayValues)
@@ -389,7 +389,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetName(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -409,7 +409,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetOperator(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetOperator(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOperator(String operator)
@@ -452,7 +452,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetSubRestrictions(NSArchiveRestrictionInfo[])
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetSubRestrictions(NSArchiveRestrictionInfo[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSubRestrictions(NSArchiveRestrictionInfo[] subRestrictions)
@@ -496,7 +496,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetValues(String[])
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetValues(String[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValues(String[] values)
