--- a/docs/api-reference/CRMScript.NetServer.NSArea.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArea.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSArea.GetAreaId()
   fullName: CRMScript.NetServer.NSArea.GetAreaId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAreaId()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSArea.GetFreetextEnabeled()
   fullName: CRMScript.NetServer.NSArea.GetFreetextEnabeled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetFreetextEnabeled()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSArea.GetMaxDataAge()
   fullName: CRMScript.NetServer.NSArea.GetMaxDataAge()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetMaxDataAge()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSArea.GetName()
   fullName: CRMScript.NetServer.NSArea.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSArea.GetNumberOfLogins()
   fullName: CRMScript.NetServer.NSArea.GetNumberOfLogins()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetNumberOfLogins()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSArea.GetNumberOfUsers()
   fullName: CRMScript.NetServer.NSArea.GetNumberOfUsers()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetNumberOfUsers()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSArea.SetAreaId(Integer)
   fullName: CRMScript.NetServer.NSArea.SetAreaId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAreaId(Integer areaId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSArea.SetMaxDataAge(Integer)
   fullName: CRMScript.NetServer.NSArea.SetMaxDataAge(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMaxDataAge(Integer maxDataAge)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSArea.SetName(String)
   fullName: CRMScript.NetServer.NSArea.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
