--- a/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
@@ -62,7 +62,7 @@ items:
   nameWithType: NSAssociate.GetAssociateId()
   fullName: CRMScript.NetServer.NSAssociate.GetAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSAssociate.GetDeleted()
   fullName: CRMScript.NetServer.NSAssociate.GetDeleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSAssociate.GetEjUserId()
   fullName: CRMScript.NetServer.NSAssociate.GetEjUserId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjUserId()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSAssociate.GetFormalName()
   fullName: CRMScript.NetServer.NSAssociate.GetFormalName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFormalName()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSAssociate.GetFullName()
   fullName: CRMScript.NetServer.NSAssociate.GetFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFullName()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSAssociate.GetGroupIdx()
   fullName: CRMScript.NetServer.NSAssociate.GetGroupIdx()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nSee the UserGroupLink database table reference for secondary memberships.\n"
   syntax: 
     content: Integer GetGroupIdx()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSAssociate.GetName()
   fullName: CRMScript.NetServer.NSAssociate.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSAssociate.GetPersonId()
   fullName: CRMScript.NetServer.NSAssociate.GetPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSAssociate.GetRank()
   fullName: CRMScript.NetServer.NSAssociate.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSAssociate.GetTooltip()
   fullName: CRMScript.NetServer.NSAssociate.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSAssociate.GetType()
   fullName: CRMScript.NetServer.NSAssociate.GetType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetType()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSAssociate.GetUserName()
   fullName: CRMScript.NetServer.NSAssociate.GetUserName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetUserName()
@@ -302,7 +302,7 @@ items:
   nameWithType: NSAssociate.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSAssociate.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSAssociate.SetDeleted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSAssociate.SetEjUserId(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetEjUserId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjUserId(Integer ejUserId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSAssociate.SetFormalName(String)
   fullName: CRMScript.NetServer.NSAssociate.SetFormalName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFormalName(String formalName)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSAssociate.SetFullName(String)
   fullName: CRMScript.NetServer.NSAssociate.SetFullName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFullName(String fullName)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSAssociate.SetGroupIdx(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetGroupIdx(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nSee the UserGroupLink database table reference for secondary memberships\n"
   syntax: 
     content: Void SetGroupIdx(Integer groupIdx)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSAssociate.SetName(String)
   fullName: CRMScript.NetServer.NSAssociate.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSAssociate.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSAssociate.SetRank(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSAssociate.SetTooltip(String)
   fullName: CRMScript.NetServer.NSAssociate.SetTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSAssociate.SetType(Integer)
   fullName: CRMScript.NetServer.NSAssociate.SetType(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetType(Integer type)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSAssociate.SetUserName(String)
   fullName: CRMScript.NetServer.NSAssociate.SetUserName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserName(String userName)
