--- a/docs/api-reference/CRMScript.NetServer.NSAssociateAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAssociateAgent.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSAssociateAgent.#ctor
   fullName: CRMScript.NetServer.NSAssociateAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociateAgent
