--- a/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSAttachmentEntity.GetAttachmentId()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAttachmentId()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSAttachmentEntity.GetAttSize()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAttSize()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSAttachmentEntity.GetContentId()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContentId()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSAttachmentEntity.GetContentType()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nTypes can for example be 'application/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'\n"
   syntax: 
     content: String GetContentType()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSAttachmentEntity.GetInlineImage()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetInlineImage()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSAttachmentEntity.GetName()
   fullName: CRMScript.NetServer.NSAttachmentEntity.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSAttachmentEntity.SetAttachmentId(Integer)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetAttachmentId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAttachmentId(Integer attachmentId)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSAttachmentEntity.SetAttSize(Integer)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetAttSize(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAttSize(Integer attSize)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSAttachmentEntity.SetContentId(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetContentId(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContentId(String contentId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSAttachmentEntity.SetContentType(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetContentType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nTypes can for example be 'application/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'.\n"
   syntax: 
     content: Void SetContentType(String contentType)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSAttachmentEntity.SetInlineImage(Bool)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetInlineImage(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetInlineImage(Bool inlineImage)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSAttachmentEntity.SetName(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
