--- a/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
@@ -60,7 +60,7 @@ items:
   nameWithType: NSBLOBAgent.#ctor
   fullName: CRMScript.NetServer.NSBLOBAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: "\nInitializes a new instance of the NSBLOBAgent class.\n"
   remarks: 
   syntax: 
     content: NSBLOBAgent
