--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -522,7 +522,7 @@ items:
   nameWithType: NSBatchTaskInfo.SetCreated(DateTime)
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreated(DateTime created)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSBatchTaskInfo.SetLastStarted(DateTime)
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastStarted(DateTime lastStarted)
