--- a/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
@@ -64,7 +64,7 @@ items:
   nameWithType: NSBlobEntity.GetBlobId()
   fullName: CRMScript.NetServer.NSBlobEntity.GetBlobId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBlobId()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSBlobEntity.GetBlobSize()
   fullName: CRMScript.NetServer.NSBlobEntity.GetBlobSize()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBlobSize()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSBlobEntity.GetConceptualType()
   fullName: CRMScript.NetServer.NSBlobEntity.GetConceptualType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConceptualType()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSBlobEntity.GetCreatedBy()
   fullName: CRMScript.NetServer.NSBlobEntity.GetCreatedBy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetCreatedBy()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSBlobEntity.GetCreatedDate()
   fullName: CRMScript.NetServer.NSBlobEntity.GetCreatedDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetCreatedDate()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSBlobEntity.GetDescription()
   fullName: CRMScript.NetServer.NSBlobEntity.GetDescription()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSBlobEntity.GetExtraInfo()
   fullName: CRMScript.NetServer.NSBlobEntity.GetExtraInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nShould not refer to any particular context, that is something for the BinaryObjectLInk\n"
   syntax: 
     content: String GetExtraInfo()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSBlobEntity.GetIsEncrypted()
   fullName: CRMScript.NetServer.NSBlobEntity.GetIsEncrypted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsEncrypted()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSBlobEntity.GetIsZipped()
   fullName: CRMScript.NetServer.NSBlobEntity.GetIsZipped()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsZipped()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSBlobEntity.GetMimeType()
   fullName: CRMScript.NetServer.NSBlobEntity.GetMimeType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetMimeType()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSBlobEntity.GetOriginalSize()
   fullName: CRMScript.NetServer.NSBlobEntity.GetOriginalSize()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis is what the ultimate client will get\n"
   syntax: 
     content: Integer GetOriginalSize()
@@ -284,7 +284,7 @@ items:
   nameWithType: NSBlobEntity.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSBlobEntity.GetUpdatedBy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetUpdatedBy()
@@ -304,7 +304,7 @@ items:
   nameWithType: NSBlobEntity.GetUpdatedDate()
   fullName: CRMScript.NetServer.NSBlobEntity.GetUpdatedDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetUpdatedDate()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSBlobEntity.SetBlobId(Integer)
   fullName: CRMScript.NetServer.NSBlobEntity.SetBlobId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBlobId(Integer blobId)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSBlobEntity.SetBlobSize(Integer)
   fullName: CRMScript.NetServer.NSBlobEntity.SetBlobSize(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBlobSize(Integer blobSize)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSBlobEntity.SetConceptualType(String)
   fullName: CRMScript.NetServer.NSBlobEntity.SetConceptualType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConceptualType(String conceptualType)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSBlobEntity.SetCreatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSBlobEntity.SetCreatedBy(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedBy(NSAssociate createdBy)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSBlobEntity.SetCreatedDate(DateTime)
   fullName: CRMScript.NetServer.NSBlobEntity.SetCreatedDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedDate(DateTime createdDate)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSBlobEntity.SetDescription(String)
   fullName: CRMScript.NetServer.NSBlobEntity.SetDescription(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSBlobEntity.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSBlobEntity.SetExtraInfo(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSBlobEntity.SetIsEncrypted(Bool)
   fullName: CRMScript.NetServer.NSBlobEntity.SetIsEncrypted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsEncrypted(Bool isEncrypted)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSBlobEntity.SetIsZipped(Bool)
   fullName: CRMScript.NetServer.NSBlobEntity.SetIsZipped(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsZipped(Bool isZipped)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSBlobEntity.SetMimeType(String)
   fullName: CRMScript.NetServer.NSBlobEntity.SetMimeType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMimeType(String mimeType)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSBlobEntity.SetOriginalSize(Integer)
   fullName: CRMScript.NetServer.NSBlobEntity.SetOriginalSize(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOriginalSize(Integer originalSize)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSBlobEntity.SetUpdatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSBlobEntity.SetUpdatedBy(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(NSAssociate updatedBy)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSBlobEntity.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSBlobEntity.SetUpdatedDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
