--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCategorizationModelDetails.GetAccuracy()
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetAccuracy()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCategorizationModelDetails.GetModelBuiltDateTime()
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetModelBuiltDateTime()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCategorizationModelDetails.GetTicketCountForTraining()
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketCountForTraining()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCategorizationModelDetails.SetAccuracy(Float)
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy(Float)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAccuracy(Float accuracy)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetModelBuiltDateTime(DateTime modelBuiltDateTime)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketCountForTraining(Integer ticketCountForTraining)
