--- a/docs/api-reference/CRMScript.NetServer.NSChangedDataItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChangedDataItem.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSChangedDataItem.GetRecordId()
   fullName: CRMScript.NetServer.NSChangedDataItem.GetRecordId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRecordId()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSChangedDataItem.GetTablename()
   fullName: CRMScript.NetServer.NSChangedDataItem.GetTablename()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTablename()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSChangedDataItem.SetRecordId(Integer)
   fullName: CRMScript.NetServer.NSChangedDataItem.SetRecordId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRecordId(Integer recordId)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSChangedDataItem.SetTablename(String)
   fullName: CRMScript.NetServer.NSChangedDataItem.SetTablename(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTablename(String tablename)
