--- a/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSChatBotSettings.GetBotMessageReceivedScriptId()
   fullName: CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBotMessageReceivedScriptId()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSChatBotSettings.GetBotName()
   fullName: CRMScript.NetServer.NSChatBotSettings.GetBotName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetBotName()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSChatBotSettings.GetBotRegisterScriptId()
   fullName: CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBotRegisterScriptId()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSChatBotSettings.GetBotSessionChangedScriptId()
   fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBotSessionChangedScriptId()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSChatBotSettings.GetBotSessionCreatedScriptId()
   fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBotSessionCreatedScriptId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotMessageReceivedScriptId(Integer botMessageReceivedScriptId)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSChatBotSettings.SetBotName(String)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotName(String botName)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSChatBotSettings.SetBotRegisterScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotRegisterScriptId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotRegisterScriptId(Integer botRegisterScriptId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSChatBotSettings.SetBotSessionChangedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotSessionChangedScriptId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotSessionChangedScriptId(Integer botSessionChangedScriptId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSChatBotSettings.SetBotSessionCreatedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotSessionCreatedScriptId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotSessionCreatedScriptId(Integer botSessionCreatedScriptId)
