--- a/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
@@ -56,7 +56,7 @@ items:
   nameWithType: NSChatMessage.GetAuthor()
   fullName: CRMScript.NetServer.NSChatMessage.GetAuthor()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAuthor()
@@ -76,7 +76,7 @@ items:
   nameWithType: NSChatMessage.GetChatMessageId()
   fullName: CRMScript.NetServer.NSChatMessage.GetChatMessageId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatMessageId()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSChatMessage.GetChatSessionId()
   fullName: CRMScript.NetServer.NSChatMessage.GetChatSessionId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatSessionId()
@@ -116,7 +116,7 @@ items:
   nameWithType: NSChatMessage.GetMessage()
   fullName: CRMScript.NetServer.NSChatMessage.GetMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetMessage()
@@ -136,7 +136,7 @@ items:
   nameWithType: NSChatMessage.GetReadByCustomer()
   fullName: CRMScript.NetServer.NSChatMessage.GetReadByCustomer()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetReadByCustomer()
@@ -156,7 +156,7 @@ items:
   nameWithType: NSChatMessage.GetSpecialParam()
   fullName: CRMScript.NetServer.NSChatMessage.GetSpecialParam()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSpecialParam()
@@ -176,7 +176,7 @@ items:
   nameWithType: NSChatMessage.GetSpecialType()
   fullName: CRMScript.NetServer.NSChatMessage.GetSpecialType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSpecialType()
@@ -196,7 +196,7 @@ items:
   nameWithType: NSChatMessage.GetType()
   fullName: CRMScript.NetServer.NSChatMessage.GetType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetType()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSChatMessage.GetWhenPosted()
   fullName: CRMScript.NetServer.NSChatMessage.GetWhenPosted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenPosted()
@@ -236,7 +236,7 @@ items:
   nameWithType: NSChatMessage.SetAuthor(String)
   fullName: CRMScript.NetServer.NSChatMessage.SetAuthor(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAuthor(String author)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSChatMessage.SetChatMessageId(Integer)
   fullName: CRMScript.NetServer.NSChatMessage.SetChatMessageId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatMessageId(Integer chatMessageId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSChatMessage.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatMessage.SetChatSessionId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatSessionId(Integer chatSessionId)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSChatMessage.SetMessage(String)
   fullName: CRMScript.NetServer.NSChatMessage.SetMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSChatMessage.SetReadByCustomer(Integer)
   fullName: CRMScript.NetServer.NSChatMessage.SetReadByCustomer(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReadByCustomer(Integer readByCustomer)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSChatMessage.SetSpecialParam(String)
   fullName: CRMScript.NetServer.NSChatMessage.SetSpecialParam(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSpecialParam(String specialParam)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSChatMessage.SetSpecialType(Integer)
   fullName: CRMScript.NetServer.NSChatMessage.SetSpecialType(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetSpecialType(Integer specialType)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSChatMessage.SetType(Integer)
   fullName: CRMScript.NetServer.NSChatMessage.SetType(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetType(Integer type)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSChatMessage.SetWhenPosted(DateTime)
   fullName: CRMScript.NetServer.NSChatMessage.SetWhenPosted(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenPosted(DateTime whenPosted)
