--- a/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSChatOpeningHours.GetFriEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetFriEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetFriEnabled()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSChatOpeningHours.GetFriStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetFriStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetFriStart()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSChatOpeningHours.GetMonEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetMonEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetMonEnabled()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSChatOpeningHours.GetMonStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetMonStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetMonStart()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSChatOpeningHours.GetMonStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetMonStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetMonStop()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSatEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSatEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetSatEnabled()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSatStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSatStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetSatStart()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSatStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSatStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetSatStop()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSunEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSunEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetSunEnabled()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSunStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSunStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetSunStart()
@@ -302,7 +302,7 @@ items:
   nameWithType: NSChatOpeningHours.GetSunStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetSunStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetSunStop()
@@ -322,7 +322,7 @@ items:
   nameWithType: NSChatOpeningHours.GetThuEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetThuEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetThuEnabled()
@@ -342,7 +342,7 @@ items:
   nameWithType: NSChatOpeningHours.GetThuStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetThuStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetThuStart()
@@ -362,7 +362,7 @@ items:
   nameWithType: NSChatOpeningHours.GetThuStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetThuStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetThuStop()
@@ -382,7 +382,7 @@ items:
   nameWithType: NSChatOpeningHours.GetTueEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetTueEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetTueEnabled()
@@ -402,7 +402,7 @@ items:
   nameWithType: NSChatOpeningHours.GetTueStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetTueStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetTueStart()
@@ -422,7 +422,7 @@ items:
   nameWithType: NSChatOpeningHours.GetTueStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetTueStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetTueStop()
@@ -442,7 +442,7 @@ items:
   nameWithType: NSChatOpeningHours.GetTzLocation()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetTzLocation()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTimeZoneData GetTzLocation()
@@ -462,7 +462,7 @@ items:
   nameWithType: NSChatOpeningHours.GetWedEnabled()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetWedEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetWedEnabled()
@@ -482,7 +482,7 @@ items:
   nameWithType: NSChatOpeningHours.GetWedStart()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetWedStart()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetWedStart()
@@ -502,7 +502,7 @@ items:
   nameWithType: NSChatOpeningHours.GetWedStop()
   fullName: CRMScript.NetServer.NSChatOpeningHours.GetWedStop()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: TimeSpan GetWedStop()
@@ -522,7 +522,7 @@ items:
   nameWithType: NSChatOpeningHours.SetFriEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetFriEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFriEnabled(Bool friEnabled)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSChatOpeningHours.SetFriStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetFriStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFriStart(TimeSpan friStart)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSChatOpeningHours.SetFriStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetFriStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFriStop(TimeSpan friStop)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSChatOpeningHours.SetMonEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetMonEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMonEnabled(Bool monEnabled)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSChatOpeningHours.SetMonStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetMonStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMonStart(TimeSpan monStart)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSChatOpeningHours.SetMonStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetMonStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMonStop(TimeSpan monStop)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSatEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSatEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSatEnabled(Bool satEnabled)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSatStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSatStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSatStart(TimeSpan satStart)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSatStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSatStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSatStop(TimeSpan satStop)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSunEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSunEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSunEnabled(Bool sunEnabled)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSunStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSunStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSunStart(TimeSpan sunStart)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSChatOpeningHours.SetSunStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetSunStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSunStop(TimeSpan sunStop)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSChatOpeningHours.SetThuEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetThuEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetThuEnabled(Bool thuEnabled)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSChatOpeningHours.SetThuStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetThuStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetThuStart(TimeSpan thuStart)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSChatOpeningHours.SetThuStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetThuStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetThuStop(TimeSpan thuStop)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSChatOpeningHours.SetTueEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetTueEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTueEnabled(Bool tueEnabled)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSChatOpeningHours.SetTueStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetTueStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTueStart(TimeSpan tueStart)
@@ -896,7 +896,7 @@ items:
   nameWithType: NSChatOpeningHours.SetTueStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetTueStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTueStop(TimeSpan tueStop)
@@ -918,7 +918,7 @@ items:
   nameWithType: NSChatOpeningHours.SetTzLocation(NSTimeZoneData)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetTzLocation(NSTimeZoneData)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTzLocation(NSTimeZoneData tzLocation)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSChatOpeningHours.SetWedEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetWedEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWedEnabled(Bool wedEnabled)
@@ -962,7 +962,7 @@ items:
   nameWithType: NSChatOpeningHours.SetWedStart(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetWedStart(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWedStart(TimeSpan wedStart)
@@ -984,7 +984,7 @@ items:
   nameWithType: NSChatOpeningHours.SetWedStop(TimeSpan)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetWedStop(TimeSpan)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWedStop(TimeSpan wedStop)
