--- a/docs/api-reference/CRMScript.NetServer.NSChatPresence.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatPresence.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSChatPresence.GetChatTopics()
   fullName: CRMScript.NetServer.NSChatPresence.GetChatTopics()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer[] GetChatTopics()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSChatPresence.GetDisplayName()
   fullName: CRMScript.NetServer.NSChatPresence.GetDisplayName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSChatPresence.GetOngoingChats()
   fullName: CRMScript.NetServer.NSChatPresence.GetOngoingChats()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetOngoingChats()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSChatPresence.GetPresent()
   fullName: CRMScript.NetServer.NSChatPresence.GetPresent()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetPresent()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSChatPresence.GetUserId()
   fullName: CRMScript.NetServer.NSChatPresence.GetUserId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUserId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSChatPresence.SetChatTopics(Integer[])
   fullName: CRMScript.NetServer.NSChatPresence.SetChatTopics(Integer[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatTopics(Integer[] chatTopics)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSChatPresence.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSChatPresence.SetDisplayName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSChatPresence.SetOngoingChats(Integer)
   fullName: CRMScript.NetServer.NSChatPresence.SetOngoingChats(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOngoingChats(Integer ongoingChats)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSChatPresence.SetPresent(Bool)
   fullName: CRMScript.NetServer.NSChatPresence.SetPresent(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPresent(Bool present)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSChatPresence.SetUserId(Integer)
   fullName: CRMScript.NetServer.NSChatPresence.SetUserId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserId(Integer userId)
