--- a/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
@@ -40,7 +40,7 @@ items:
   nameWithType: NSChatSession.GetChatSessionId()
   fullName: CRMScript.NetServer.NSChatSession.GetChatSessionId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatSessionId()
@@ -60,7 +60,7 @@ items:
   nameWithType: NSChatSession.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatSession.SetChatSessionId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatSessionId(Integer chatSessionId)
