--- a/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
@@ -98,7 +98,7 @@ items:
   nameWithType: NSChatSessionEntity.GetAlertLevel()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetAlertLevel()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAlertLevel()
@@ -118,7 +118,7 @@ items:
   nameWithType: NSChatSessionEntity.GetChatbotIsActive()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetChatbotIsActive()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetChatbotIsActive()
@@ -138,7 +138,7 @@ items:
   nameWithType: NSChatSessionEntity.GetChatSessionId()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetChatSessionId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatSessionId()
@@ -158,7 +158,7 @@ items:
   nameWithType: NSChatSessionEntity.GetContact()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetContact()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSContact GetContact()
@@ -178,7 +178,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerAlias()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerAlias()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerAlias()
@@ -198,7 +198,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerCompanyName()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerCompanyName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerCompanyName()
@@ -218,7 +218,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerConsented()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerConsented()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCustomerConsented()
@@ -238,7 +238,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerEmail()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerEmail()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerEmail()
@@ -258,7 +258,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerHost()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerHost()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerHost()
@@ -278,7 +278,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerName()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerName()
@@ -298,7 +298,7 @@ items:
   nameWithType: NSChatSessionEntity.GetCustomerPhone()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetCustomerPhone()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomerPhone()
@@ -318,7 +318,7 @@ items:
   nameWithType: NSChatSessionEntity.GetFirstMessage()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetFirstMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFirstMessage()
@@ -338,7 +338,7 @@ items:
   nameWithType: NSChatSessionEntity.GetFlags()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetFlags()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Integer GetFlags()
@@ -358,7 +358,7 @@ items:
   nameWithType: NSChatSessionEntity.GetInitialQueuePos()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetInitialQueuePos()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetInitialQueuePos()
@@ -378,7 +378,7 @@ items:
   nameWithType: NSChatSessionEntity.GetLastMessage()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetLastMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLastMessage()
@@ -398,7 +398,7 @@ items:
   nameWithType: NSChatSessionEntity.GetPerson()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetPerson()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSPerson GetPerson()
@@ -418,7 +418,7 @@ items:
   nameWithType: NSChatSessionEntity.GetProject()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetProject()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSProject GetProject()
@@ -438,7 +438,7 @@ items:
   nameWithType: NSChatSessionEntity.GetRank()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -458,7 +458,7 @@ items:
   nameWithType: NSChatSessionEntity.GetSale()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetSale()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSSale GetSale()
@@ -478,7 +478,7 @@ items:
   nameWithType: NSChatSessionEntity.GetSessionKey()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetSessionKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSessionKey()
@@ -498,7 +498,7 @@ items:
   nameWithType: NSChatSessionEntity.GetStatus()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetStatus()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetStatus()
@@ -518,7 +518,7 @@ items:
   nameWithType: NSChatSessionEntity.GetTicket()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetTicket()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTicket GetTicket()
@@ -538,7 +538,7 @@ items:
   nameWithType: NSChatSessionEntity.GetTopicId()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetTopicId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTopicId()
@@ -558,7 +558,7 @@ items:
   nameWithType: NSChatSessionEntity.GetTransferTo()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetTransferTo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetTransferTo()
@@ -578,7 +578,7 @@ items:
   nameWithType: NSChatSessionEntity.GetUser()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetUser()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetUser()
@@ -598,7 +598,7 @@ items:
   nameWithType: NSChatSessionEntity.GetWhenEnded()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetWhenEnded()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenEnded()
@@ -618,7 +618,7 @@ items:
   nameWithType: NSChatSessionEntity.GetWhenFetched()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetWhenFetched()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenFetched()
@@ -638,7 +638,7 @@ items:
   nameWithType: NSChatSessionEntity.GetWhenIdle()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetWhenIdle()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenIdle()
@@ -658,7 +658,7 @@ items:
   nameWithType: NSChatSessionEntity.GetWhenRequested()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetWhenRequested()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenRequested()
@@ -678,7 +678,7 @@ items:
   nameWithType: NSChatSessionEntity.GetWhenStarted()
   fullName: CRMScript.NetServer.NSChatSessionEntity.GetWhenStarted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenStarted()
@@ -698,7 +698,7 @@ items:
   nameWithType: NSChatSessionEntity.SetAlertLevel(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetAlertLevel(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAlertLevel(Integer alertLevel)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSChatSessionEntity.SetChatbotIsActive(Bool)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetChatbotIsActive(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatbotIsActive(Bool chatbotIsActive)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSChatSessionEntity.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetChatSessionId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatSessionId(Integer chatSessionId)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSChatSessionEntity.SetContact(NSContact)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetContact(NSContact)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContact(NSContact contact)
@@ -784,7 +784,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerAlias(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerAlias(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerAlias(String customerAlias)
@@ -806,7 +806,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerCompanyName(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerCompanyName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerCompanyName(String customerCompanyName)
@@ -828,7 +828,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerConsented(Bool)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerConsented(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerConsented(Bool customerConsented)
@@ -850,7 +850,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerEmail(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerEmail(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerEmail(String customerEmail)
@@ -872,7 +872,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerHost(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerHost(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerHost(String customerHost)
@@ -894,7 +894,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerName(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerName(String customerName)
@@ -916,7 +916,7 @@ items:
   nameWithType: NSChatSessionEntity.SetCustomerPhone(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetCustomerPhone(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomerPhone(String customerPhone)
@@ -938,7 +938,7 @@ items:
   nameWithType: NSChatSessionEntity.SetFirstMessage(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetFirstMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFirstMessage(String firstMessage)
@@ -960,7 +960,7 @@ items:
   nameWithType: NSChatSessionEntity.SetFlags(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetFlags(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "n"
   syntax: 
     content: Void SetFlags(Integer flags)
@@ -982,7 +982,7 @@ items:
   nameWithType: NSChatSessionEntity.SetInitialQueuePos(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetInitialQueuePos(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetInitialQueuePos(Integer initialQueuePos)
@@ -1004,7 +1004,7 @@ items:
   nameWithType: NSChatSessionEntity.SetLastMessage(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetLastMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastMessage(String lastMessage)
@@ -1026,7 +1026,7 @@ items:
   nameWithType: NSChatSessionEntity.SetPerson(NSPerson)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetPerson(NSPerson)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPerson(NSPerson person)
@@ -1048,7 +1048,7 @@ items:
   nameWithType: NSChatSessionEntity.SetProject(NSProject)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetProject(NSProject)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProject(NSProject project)
@@ -1070,7 +1070,7 @@ items:
   nameWithType: NSChatSessionEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -1092,7 +1092,7 @@ items:
   nameWithType: NSChatSessionEntity.SetSale(NSSale)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetSale(NSSale)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSale(NSSale sale)
@@ -1114,7 +1114,7 @@ items:
   nameWithType: NSChatSessionEntity.SetSessionKey(String)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetSessionKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSessionKey(String sessionKey)
@@ -1136,7 +1136,7 @@ items:
   nameWithType: NSChatSessionEntity.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetStatus(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetStatus(Integer status)
@@ -1156,7 +1156,7 @@ items:
   nameWithType: NSChatSessionEntity.SetTicket(NSTicket)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetTicket(NSTicket)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicket(NSTicket ticket)
@@ -1178,7 +1178,7 @@ items:
   nameWithType: NSChatSessionEntity.SetTopicId(Integer)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetTopicId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTopicId(Integer topicId)
@@ -1200,7 +1200,7 @@ items:
   nameWithType: NSChatSessionEntity.SetTransferTo(NSAssociate)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetTransferTo(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTransferTo(NSAssociate transferTo)
@@ -1222,7 +1222,7 @@ items:
   nameWithType: NSChatSessionEntity.SetUser(NSAssociate)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetUser(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUser(NSAssociate user)
@@ -1244,7 +1244,7 @@ items:
   nameWithType: NSChatSessionEntity.SetWhenEnded(DateTime)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetWhenEnded(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenEnded(DateTime whenEnded)
@@ -1266,7 +1266,7 @@ items:
   nameWithType: NSChatSessionEntity.SetWhenFetched(DateTime)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetWhenFetched(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenFetched(DateTime whenFetched)
@@ -1288,7 +1288,7 @@ items:
   nameWithType: NSChatSessionEntity.SetWhenIdle(DateTime)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetWhenIdle(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenIdle(DateTime whenIdle)
@@ -1310,7 +1310,7 @@ items:
   nameWithType: NSChatSessionEntity.SetWhenRequested(DateTime)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetWhenRequested(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenRequested(DateTime whenRequested)
@@ -1332,7 +1332,7 @@ items:
   nameWithType: NSChatSessionEntity.SetWhenStarted(DateTime)
   fullName: CRMScript.NetServer.NSChatSessionEntity.SetWhenStarted(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenStarted(DateTime whenStarted)
