--- a/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSChatSummaryItem.GetChatSessionId()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatSessionId()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSChatSummaryItem.GetCompanyName()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCompanyName()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSChatSummaryItem.GetFirstMessage()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFirstMessage()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSChatSummaryItem.GetLastMessage()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLastMessage()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSChatSummaryItem.GetName()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSChatSummaryItem.GetWhenEnded()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenEnded()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSChatSummaryItem.GetWhenRequested()
   fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetWhenRequested()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSChatSummaryItem.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetChatSessionId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatSessionId(Integer chatSessionId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSChatSummaryItem.SetCompanyName(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetCompanyName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCompanyName(String companyName)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSChatSummaryItem.SetFirstMessage(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetFirstMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFirstMessage(String firstMessage)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSChatSummaryItem.SetLastMessage(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetLastMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastMessage(String lastMessage)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSChatSummaryItem.SetName(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSChatSummaryItem.SetWhenEnded(DateTime)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenEnded(DateTime whenEnded)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSChatSummaryItem.SetWhenRequested(DateTime)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWhenRequested(DateTime whenRequested)
