--- a/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSChatTopicAgent.GetCanListen()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanListen()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanListen()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSChatTopicAgent.GetCanManage()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanManage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanManage()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSChatTopicAgent.GetCanNotify()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanNotify()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanNotify()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSChatTopicAgent.GetTopicId()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetTopicId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTopicId()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSChatTopicAgent.GetUser()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetUser()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetUser()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSChatTopicAgent.SetCanListen(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanListen(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanListen(Bool canListen)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSChatTopicAgent.SetCanManage(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanManage(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanManage(Bool canManage)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSChatTopicAgent.SetCanNotify(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanNotify(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanNotify(Bool canNotify)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSChatTopicAgent.SetCanRespond(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanRespond(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanRespond(Bool canRespond)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSChatTopicAgent.SetTopicId(Integer)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetTopicId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTopicId(Integer topicId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSChatTopicAgent.SetUser(NSAssociate)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetUser(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUser(NSAssociate user)
