--- a/docs/api-reference/CRMScript.NetServer.NSChatTopicEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatTopicEntity.yml
@@ -84,7 +84,7 @@ items:
   nameWithType: NSChatTopicEntity.GetAlertRecipient()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetAlertRecipient()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAlertRecipient()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSChatTopicEntity.GetAlertTemplate()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetAlertTemplate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSReplyTemplate GetAlertTemplate()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSChatTopicEntity.GetBadgeHeader()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetBadgeHeader()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetBadgeHeader()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSChatTopicEntity.GetBotEnabled()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetBotEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetBotEnabled()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSChatTopicEntity.GetBotSettings()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetBotSettings()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChatBotSettings GetBotSettings()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSChatTopicEntity.GetChatTopicId()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetChatTopicId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetChatTopicId()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSChatTopicEntity.GetCollectConsent()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetCollectConsent()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCollectConsent()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSChatTopicEntity.GetCustomQueueText()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetCustomQueueText()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCustomQueueText()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSChatTopicEntity.GetCustomQueueTextEnabled()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetCustomQueueTextEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCustomQueueTextEnabled()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSChatTopicEntity.GetDescription()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetDescription()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -284,7 +284,7 @@ items:
   nameWithType: NSChatTopicEntity.GetLanguage()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetLanguage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSCustomerLanguage GetLanguage()
@@ -304,7 +304,7 @@ items:
   nameWithType: NSChatTopicEntity.GetLastAccept()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetLastAccept()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetLastAccept()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSChatTopicEntity.GetName()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -344,7 +344,7 @@ items:
   nameWithType: NSChatTopicEntity.GetOpeningHours()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetOpeningHours()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChatOpeningHours GetOpeningHours()
@@ -364,7 +364,7 @@ items:
   nameWithType: NSChatTopicEntity.GetOpeningHoursEnabled()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetOpeningHoursEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOpeningHoursEnabled()
@@ -384,7 +384,7 @@ items:
   nameWithType: NSChatTopicEntity.GetSecondsPrAccept()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetSecondsPrAccept()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSecondsPrAccept()
@@ -404,7 +404,7 @@ items:
   nameWithType: NSChatTopicEntity.GetTicketCategory()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetTicketCategory()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTicketCategory GetTicketCategory()
@@ -424,7 +424,7 @@ items:
   nameWithType: NSChatTopicEntity.GetTicketEnabled()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetTicketEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetTicketEnabled()
@@ -444,7 +444,7 @@ items:
   nameWithType: NSChatTopicEntity.GetTicketPriority()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetTicketPriority()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTicketPriority GetTicketPriority()
@@ -464,7 +464,7 @@ items:
   nameWithType: NSChatTopicEntity.GetWarnManagerNewChatMinutes()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetWarnManagerNewChatMinutes()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetWarnManagerNewChatMinutes()
@@ -484,7 +484,7 @@ items:
   nameWithType: NSChatTopicEntity.GetWarnNewChatMinutes()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetWarnNewChatMinutes()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetWarnNewChatMinutes()
@@ -504,7 +504,7 @@ items:
   nameWithType: NSChatTopicEntity.GetWelcomeMessage()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetWelcomeMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWelcomeMessage()
@@ -524,7 +524,7 @@ items:
   nameWithType: NSChatTopicEntity.GetWidget()
   fullName: CRMScript.NetServer.NSChatTopicEntity.GetWidget()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChatWidgetSettings GetWidget()
@@ -544,7 +544,7 @@ items:
   nameWithType: NSChatTopicEntity.SetAlertRecipient(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetAlertRecipient(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAlertRecipient(String alertRecipient)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSChatTopicEntity.SetAlertTemplate(NSReplyTemplate)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetAlertTemplate(NSReplyTemplate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAlertTemplate(NSReplyTemplate alertTemplate)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSChatTopicEntity.SetBadgeHeader(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetBadgeHeader(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBadgeHeader(String badgeHeader)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSChatTopicEntity.SetBotEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetBotEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotEnabled(Bool botEnabled)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSChatTopicEntity.SetBotSettings(NSChatBotSettings)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetBotSettings(NSChatBotSettings)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBotSettings(NSChatBotSettings botSettings)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSChatTopicEntity.SetChatTopicId(Integer)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetChatTopicId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChatTopicId(Integer chatTopicId)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSChatTopicEntity.SetCollectConsent(Bool)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetCollectConsent(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCollectConsent(Bool collectConsent)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSChatTopicEntity.SetCustomQueueText(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetCustomQueueText(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomQueueText(String customQueueText)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSChatTopicEntity.SetCustomQueueTextEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetCustomQueueTextEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomQueueTextEnabled(Bool customQueueTextEnabled)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSChatTopicEntity.SetDescription(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetDescription(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSChatTopicEntity.SetLanguage(NSCustomerLanguage)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetLanguage(NSCustomerLanguage)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLanguage(NSCustomerLanguage language)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSChatTopicEntity.SetLastAccept(DateTime)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetLastAccept(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastAccept(DateTime lastAccept)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSChatTopicEntity.SetName(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSChatTopicEntity.SetOpeningHours(NSChatOpeningHours)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetOpeningHours(NSChatOpeningHours)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOpeningHours(NSChatOpeningHours openingHours)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSChatTopicEntity.SetOpeningHoursEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetOpeningHoursEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOpeningHoursEnabled(Bool openingHoursEnabled)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSChatTopicEntity.SetSecondsPrAccept(Integer)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetSecondsPrAccept(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSecondsPrAccept(Integer secondsPrAccept)
@@ -896,7 +896,7 @@ items:
   nameWithType: NSChatTopicEntity.SetTicketCategory(NSTicketCategory)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetTicketCategory(NSTicketCategory)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketCategory(NSTicketCategory ticketCategory)
@@ -918,7 +918,7 @@ items:
   nameWithType: NSChatTopicEntity.SetTicketEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetTicketEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketEnabled(Bool ticketEnabled)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSChatTopicEntity.SetTicketPriority(NSTicketPriority)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetTicketPriority(NSTicketPriority)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketPriority(NSTicketPriority ticketPriority)
@@ -962,7 +962,7 @@ items:
   nameWithType: NSChatTopicEntity.SetWarnManagerNewChatMinutes(Integer)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetWarnManagerNewChatMinutes(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWarnManagerNewChatMinutes(Integer warnManagerNewChatMinutes)
@@ -984,7 +984,7 @@ items:
   nameWithType: NSChatTopicEntity.SetWarnNewChatMinutes(Integer)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetWarnNewChatMinutes(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWarnNewChatMinutes(Integer warnNewChatMinutes)
@@ -1006,7 +1006,7 @@ items:
   nameWithType: NSChatTopicEntity.SetWelcomeMessage(String)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetWelcomeMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWelcomeMessage(String welcomeMessage)
@@ -1028,7 +1028,7 @@ items:
   nameWithType: NSChatTopicEntity.SetWidget(NSChatWidgetSettings)
   fullName: CRMScript.NetServer.NSChatTopicEntity.SetWidget(NSChatWidgetSettings)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWidget(NSChatWidgetSettings widget)
