--- a/docs/api-reference/CRMScript.NetServer.NSChatWidgetSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatWidgetSettings.yml
@@ -84,7 +84,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetAutoFaqCategory()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetAutoFaqCategory()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSKbCategory GetAutoFaqCategory()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetAutoFaqEnabled()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetAutoFaqEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetAutoFaqEnabled()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetColor()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetColor()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetColor()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetFont()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetFont()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFont()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetLanguageIsoCode()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetLanguageIsoCode()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLanguageIsoCode()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetLogoBlobId()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetLogoBlobId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetLogoBlobId()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetLogoEnabled()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetLogoEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetLogoEnabled()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetLogoName()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetLogoName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLogoName()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetOfflineFields()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetOfflineFields()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetOfflineFields()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetOfflineHeader()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetOfflineHeader()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOfflineHeader()
@@ -284,7 +284,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetOfflineMessage()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetOfflineMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOfflineMessage()
@@ -304,7 +304,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPostFormEnabled()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPostFormEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetPostFormEnabled()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPostFormHeader()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPostFormHeader()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPostFormHeader()
@@ -344,7 +344,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPostFormMessage()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPostFormMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPostFormMessage()
@@ -364,7 +364,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPostTranscriptEnabled()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPostTranscriptEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetPostTranscriptEnabled()
@@ -384,7 +384,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPreFormEnabled()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPreFormEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetPreFormEnabled()
@@ -404,7 +404,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetPreFormMessage()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetPreFormMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPreFormMessage()
@@ -424,7 +424,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetRequiredFields()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetRequiredFields()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRequiredFields()
@@ -444,7 +444,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetShowAgentPhoto()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetShowAgentPhoto()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetShowAgentPhoto()
@@ -464,7 +464,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetSize()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetSize()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSize()
@@ -484,7 +484,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetTheme()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetTheme()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTheme()
@@ -504,7 +504,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetWelcomeMessage()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetWelcomeMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWelcomeMessage()
@@ -524,7 +524,7 @@ items:
   nameWithType: NSChatWidgetSettings.GetWelcomeTitle()
   fullName: CRMScript.NetServer.NSChatWidgetSettings.GetWelcomeTitle()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWelcomeTitle()
@@ -544,7 +544,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetAutoFaqCategory(NSKbCategory)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetAutoFaqCategory(NSKbCategory)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAutoFaqCategory(NSKbCategory autoFaqCategory)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetAutoFaqEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetAutoFaqEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAutoFaqEnabled(Bool autoFaqEnabled)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetColor(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetColor(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetColor(String color)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetFont(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetFont(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFont(String font)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetLanguageIsoCode(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetLanguageIsoCode(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLanguageIsoCode(String languageIsoCode)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetLogoBlobId(Integer)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetLogoBlobId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLogoBlobId(Integer logoBlobId)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetLogoEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetLogoEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLogoEnabled(Bool logoEnabled)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetLogoName(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetLogoName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLogoName(String logoName)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetOfflineFields(Integer)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetOfflineFields(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetOfflineFields(Integer offlineFields)
@@ -740,7 +740,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetOfflineHeader(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetOfflineHeader(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOfflineHeader(String offlineHeader)
@@ -762,7 +762,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetOfflineMessage(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetOfflineMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOfflineMessage(String offlineMessage)
@@ -784,7 +784,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPostFormEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPostFormEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPostFormEnabled(Bool postFormEnabled)
@@ -806,7 +806,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPostFormHeader(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPostFormHeader(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPostFormHeader(String postFormHeader)
@@ -828,7 +828,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPostFormMessage(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPostFormMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPostFormMessage(String postFormMessage)
@@ -850,7 +850,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPostTranscriptEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPostTranscriptEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPostTranscriptEnabled(Bool postTranscriptEnabled)
@@ -872,7 +872,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPreFormEnabled(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPreFormEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPreFormEnabled(Bool preFormEnabled)
@@ -894,7 +894,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetPreFormMessage(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetPreFormMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPreFormMessage(String preFormMessage)
@@ -916,7 +916,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetRequiredFields(Integer)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetRequiredFields(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetRequiredFields(Integer requiredFields)
@@ -938,7 +938,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetShowAgentPhoto(Bool)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetShowAgentPhoto(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetShowAgentPhoto(Bool showAgentPhoto)
@@ -960,7 +960,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetSize(Integer)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetSize(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetSize(Integer size)
@@ -982,7 +982,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetTheme(Integer)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetTheme(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetTheme(Integer theme)
@@ -1004,7 +1004,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetWelcomeMessage(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetWelcomeMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWelcomeMessage(String welcomeMessage)
@@ -1026,7 +1026,7 @@ items:
   nameWithType: NSChatWidgetSettings.SetWelcomeTitle(String)
   fullName: CRMScript.NetServer.NSChatWidgetSettings.SetWelcomeTitle(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWelcomeTitle(String welcomeTitle)
