--- a/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.GetLicenseStatus()
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetLicenseStatus()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.GetMessage()
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetMessage()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.GetUrl()
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetUrl()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLicenseStatus(Integer licenseStatus)
@@ -124,7 +124,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetMessage(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
@@ -146,7 +146,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetUrl(String)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetUrl(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUrl(String url)
