--- a/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCheckoutInfo.GetAssociateId()
   fullName: CRMScript.NetServer.NSCheckoutInfo.GetAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCheckoutInfo.GetName()
   fullName: CRMScript.NetServer.NSCheckoutInfo.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis property may also be blank if the AssociateId is nonzero; NetServer will retrieve the associates' name as needed.\n"
   syntax: 
     content: String GetName()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCheckoutInfo.GetState()
   fullName: CRMScript.NetServer.NSCheckoutInfo.GetState()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetState()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCheckoutInfo.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCheckoutInfo.SetAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCheckoutInfo.SetName(String)
   fullName: CRMScript.NetServer.NSCheckoutInfo.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis property may also be blank if the AssociateId is nonzero; NetServer will retrieve the associates' name as needed.\n"
   syntax: 
     content: Void SetName(String name)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCheckoutInfo.SetState(Integer)
   fullName: CRMScript.NetServer.NSCheckoutInfo.SetState(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetState(Integer state)
