--- a/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSCommandInfo.GetDisplayName()
   fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSCommandInfo.GetDisplayTooltip()
   fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayTooltip()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSCommandInfo.GetIconHint()
   fullName: CRMScript.NetServer.NSCommandInfo.GetIconHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetIconHint()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSCommandInfo.GetName()
   fullName: CRMScript.NetServer.NSCommandInfo.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSCommandInfo.GetReturnType()
   fullName: CRMScript.NetServer.NSCommandInfo.GetReturnType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetReturnType()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCommandInfo.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSCommandInfo.SetDisplayTooltip(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetDisplayTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayTooltip(String displayTooltip)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCommandInfo.SetIconHint(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetIconHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIconHint(String iconHint)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCommandInfo.SetName(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCommandInfo.SetReturnType(Integer)
   fullName: CRMScript.NetServer.NSCommandInfo.SetReturnType(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReturnType(Integer returnType)
