--- a/docs/api-reference/CRMScript.NetServer.NSCompetitor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCompetitor.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCompetitor.GetId()
   fullName: CRMScript.NetServer.NSCompetitor.GetId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCompetitor.GetTooltip()
   fullName: CRMScript.NetServer.NSCompetitor.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCompetitor.GetValue()
   fullName: CRMScript.NetServer.NSCompetitor.GetValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetValue()
