--- a/docs/api-reference/CRMScript.NetServer.NSConfigurationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConfigurationAgent.yml
@@ -60,7 +60,7 @@ items:
   nameWithType: NSConfigurationAgent.#ctor
   fullName: CRMScript.NetServer.NSConfigurationAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: "\nInitializes a new instance of the NSConfigurationAgent class.\n"
   remarks: 
   syntax: 
     content: NSConfigurationAgent
@@ -209,7 +209,7 @@ items:
   nameWithType: NSConfigurationAgent.ExistsSystemEvent(String)
   fullName: CRMScript.NetServer.NSConfigurationAgent.ExistsSystemEvent(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool ExistsSystemEvent(String key)
@@ -489,7 +489,7 @@ items:
   nameWithType: NSConfigurationAgent.GetEmailNumberOfDays()
   fullName: CRMScript.NetServer.NSConfigurationAgent.GetEmailNumberOfDays()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEmailNumberOfDays()
@@ -509,7 +509,7 @@ items:
   nameWithType: NSConfigurationAgent.GetEMarketingUrl(String)
   fullName: CRMScript.NetServer.NSConfigurationAgent.GetEMarketingUrl(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEMarketingUrl(String language)
