--- a/docs/api-reference/CRMScript.NetServer.NSConsentInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentInfo.yml
@@ -68,7 +68,7 @@ items:
   nameWithType: NSConsentInfo.GetComment()
   fullName: CRMScript.NetServer.NSConsentInfo.GetComment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetComment()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentPersonId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetConsentPersonId()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentPurposeId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentPurposeId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetConsentPurposeId()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentPurposeKey()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentPurposeKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConsentPurposeKey()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentPurposeName()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentPurposeName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConsentPurposeName()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentSourceId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentSourceId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetConsentSourceId()
@@ -188,7 +188,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentSourceKey()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentSourceKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConsentSourceKey()
@@ -208,7 +208,7 @@ items:
   nameWithType: NSConsentInfo.GetConsentSourceName()
   fullName: CRMScript.NetServer.NSConsentInfo.GetConsentSourceName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConsentSourceName()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSConsentInfo.GetLegalBaseId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetLegalBaseId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetLegalBaseId()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSConsentInfo.GetLegalBaseKey()
   fullName: CRMScript.NetServer.NSConsentInfo.GetLegalBaseKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLegalBaseKey()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSConsentInfo.GetLegalBaseName()
   fullName: CRMScript.NetServer.NSConsentInfo.GetLegalBaseName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLegalBaseName()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSConsentInfo.GetRegistered()
   fullName: CRMScript.NetServer.NSConsentInfo.GetRegistered()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetRegistered()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSConsentInfo.GetRegisteredAssociateId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetRegisteredAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRegisteredAssociateId()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSConsentInfo.GetUpdated()
   fullName: CRMScript.NetServer.NSConsentInfo.GetUpdated()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetUpdated()
@@ -348,7 +348,7 @@ items:
   nameWithType: NSConsentInfo.GetUpdatedAssociateId()
   fullName: CRMScript.NetServer.NSConsentInfo.GetUpdatedAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUpdatedAssociateId()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSConsentInfo.SetComment(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetComment(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetComment(String comment)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentPersonId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPersonId(Integer consentPersonId)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentPurposeId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentPurposeId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPurposeId(Integer consentPurposeId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentPurposeKey(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentPurposeKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPurposeKey(String consentPurposeKey)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentPurposeName(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentPurposeName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPurposeName(String consentPurposeName)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentSourceId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentSourceId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentSourceId(Integer consentSourceId)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentSourceKey(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentSourceKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentSourceKey(String consentSourceKey)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSConsentInfo.SetConsentSourceName(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetConsentSourceName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentSourceName(String consentSourceName)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSConsentInfo.SetLegalBaseId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetLegalBaseId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLegalBaseId(Integer legalBaseId)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSConsentInfo.SetLegalBaseKey(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetLegalBaseKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLegalBaseKey(String legalBaseKey)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSConsentInfo.SetLegalBaseName(String)
   fullName: CRMScript.NetServer.NSConsentInfo.SetLegalBaseName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLegalBaseName(String legalBaseName)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSConsentInfo.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSConsentInfo.SetRegistered(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSConsentInfo.SetRegisteredAssociateId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetRegisteredAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRegisteredAssociateId(Integer registeredAssociateId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSConsentInfo.SetUpdated(DateTime)
   fullName: CRMScript.NetServer.NSConsentInfo.SetUpdated(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdated(DateTime updated)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSConsentInfo.SetUpdatedAssociateId(Integer)
   fullName: CRMScript.NetServer.NSConsentInfo.SetUpdatedAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedAssociateId(Integer updatedAssociateId)
