--- a/docs/api-reference/CRMScript.NetServer.NSContact.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContact.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSContact.GetActiveErpLinks()
   fullName: CRMScript.NetServer.NSContact.GetActiveErpLinks()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetActiveErpLinks()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSContact.GetAddress()
   fullName: CRMScript.NetServer.NSContact.GetAddress()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nUsed to store localized information such as formatted address data. Suitable for passing to an address control for display.\n"
   syntax: 
     content: NSAddress GetAddress()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSContact.GetAssociateFullName()
   fullName: CRMScript.NetServer.NSContact.GetAssociateFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAssociateFullName()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSContact.GetAssociateId()
   fullName: CRMScript.NetServer.NSContact.GetAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSContact.GetBusinessName()
   fullName: CRMScript.NetServer.NSContact.GetBusinessName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetBusinessName()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSContact.GetCategoryName()
   fullName: CRMScript.NetServer.NSContact.GetCategoryName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCategoryName()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSContact.GetCity()
   fullName: CRMScript.NetServer.NSContact.GetCity()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCity()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSContact.GetContactId()
   fullName: CRMScript.NetServer.NSContact.GetContactId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSContact.GetCountryId()
   fullName: CRMScript.NetServer.NSContact.GetCountryId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCountryId()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSContact.GetCountryName()
   fullName: CRMScript.NetServer.NSContact.GetCountryName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCountryName()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSContact.GetDepartment()
   fullName: CRMScript.NetServer.NSContact.GetDepartment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDepartment()
@@ -302,7 +302,7 @@ items:
   nameWithType: NSContact.GetDirectPhone()
   fullName: CRMScript.NetServer.NSContact.GetDirectPhone()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDirectPhone()
@@ -322,7 +322,7 @@ items:
   nameWithType: NSContact.GetEmailAddress()
   fullName: CRMScript.NetServer.NSContact.GetEmailAddress()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEmailAddress()
@@ -342,7 +342,7 @@ items:
   nameWithType: NSContact.GetEmailAddressName()
   fullName: CRMScript.NetServer.NSContact.GetEmailAddressName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEmailAddressName()
@@ -362,7 +362,7 @@ items:
   nameWithType: NSContact.GetFormattedAddress()
   fullName: CRMScript.NetServer.NSContact.GetFormattedAddress()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFormattedAddress()
@@ -382,7 +382,7 @@ items:
   nameWithType: NSContact.GetFullName()
   fullName: CRMScript.NetServer.NSContact.GetFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFullName()
@@ -402,7 +402,7 @@ items:
   nameWithType: NSContact.GetIsOwnerContact()
   fullName: CRMScript.NetServer.NSContact.GetIsOwnerContact()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis means that all persons on this contact can on only be internal users and not external users.\n"
   syntax: 
     content: Bool GetIsOwnerContact()
@@ -422,7 +422,7 @@ items:
   nameWithType: NSContact.GetKananame()
   fullName: CRMScript.NetServer.NSContact.GetKananame()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetKananame()
@@ -442,7 +442,7 @@ items:
   nameWithType: NSContact.GetName()
   fullName: CRMScript.NetServer.NSContact.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -462,7 +462,7 @@ items:
   nameWithType: NSContact.GetOrgNr()
   fullName: CRMScript.NetServer.NSContact.GetOrgNr()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOrgNr()
@@ -482,7 +482,7 @@ items:
   nameWithType: NSContact.GetURL()
   fullName: CRMScript.NetServer.NSContact.GetURL()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetURL()
@@ -502,7 +502,7 @@ items:
   nameWithType: NSContact.GetURLName()
   fullName: CRMScript.NetServer.NSContact.GetURLName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetURLName()
@@ -522,7 +522,7 @@ items:
   nameWithType: NSContact.SetActiveErpLinks(Integer)
   fullName: CRMScript.NetServer.NSContact.SetActiveErpLinks(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActiveErpLinks(Integer activeErpLinks)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSContact.SetAddress(NSAddress)
   fullName: CRMScript.NetServer.NSContact.SetAddress(NSAddress)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nUsed to store localized information such as formatted address data. Suitable for passing to an address control for display.\n"
   syntax: 
     content: Void SetAddress(NSAddress address)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSContact.SetAssociateFullName(String)
   fullName: CRMScript.NetServer.NSContact.SetAssociateFullName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateFullName(String associateFullName)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSContact.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSContact.SetAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSContact.SetBusinessName(String)
   fullName: CRMScript.NetServer.NSContact.SetBusinessName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBusinessName(String businessName)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSContact.SetCategoryName(String)
   fullName: CRMScript.NetServer.NSContact.SetCategoryName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCategoryName(String categoryName)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSContact.SetCity(String)
   fullName: CRMScript.NetServer.NSContact.SetCity(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCity(String city)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSContact.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSContact.SetContactId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSContact.SetCountryId(Integer)
   fullName: CRMScript.NetServer.NSContact.SetCountryId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCountryId(Integer countryId)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSContact.SetCountryName(String)
   fullName: CRMScript.NetServer.NSContact.SetCountryName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCountryName(String countryName)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSContact.SetDepartment(String)
   fullName: CRMScript.NetServer.NSContact.SetDepartment(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDepartment(String department)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSContact.SetDirectPhone(String)
   fullName: CRMScript.NetServer.NSContact.SetDirectPhone(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDirectPhone(String directPhone)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSContact.SetEmailAddress(String)
   fullName: CRMScript.NetServer.NSContact.SetEmailAddress(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEmailAddress(String emailAddress)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSContact.SetEmailAddressName(String)
   fullName: CRMScript.NetServer.NSContact.SetEmailAddressName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEmailAddressName(String emailAddressName)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSContact.SetFormattedAddress(String)
   fullName: CRMScript.NetServer.NSContact.SetFormattedAddress(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFormattedAddress(String formattedAddress)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSContact.SetIsOwnerContact(Bool)
   fullName: CRMScript.NetServer.NSContact.SetIsOwnerContact(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis means that all persons on this contact can on only be internal users and not external users.\n"
   syntax: 
     content: Void SetIsOwnerContact(Bool isOwnerContact)
@@ -896,7 +896,7 @@ items:
   nameWithType: NSContact.SetKananame(String)
   fullName: CRMScript.NetServer.NSContact.SetKananame(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetKananame(String kananame)
@@ -918,7 +918,7 @@ items:
   nameWithType: NSContact.SetName(String)
   fullName: CRMScript.NetServer.NSContact.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSContact.SetOrgNr(String)
   fullName: CRMScript.NetServer.NSContact.SetOrgNr(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOrgNr(String orgNr)
@@ -962,7 +962,7 @@ items:
   nameWithType: NSContact.SetURL(String)
   fullName: CRMScript.NetServer.NSContact.SetURL(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetURL(String uRL)
@@ -984,7 +984,7 @@ items:
   nameWithType: NSContact.SetURLName(String)
   fullName: CRMScript.NetServer.NSContact.SetURLName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetURLName(String uRLName)
