--- a/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
@@ -66,7 +66,7 @@ items:
   nameWithType: NSContactActivity.GetAction()
   fullName: CRMScript.NetServer.NSContactActivity.GetAction()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAction()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSContactActivity.GetActionId()
   fullName: CRMScript.NetServer.NSContactActivity.GetActionId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetActionId()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSContactActivity.GetActionTime()
   fullName: CRMScript.NetServer.NSContactActivity.GetActionTime()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetActionTime()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSContactActivity.GetActivityPersonId()
   fullName: CRMScript.NetServer.NSContactActivity.GetActivityPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetActivityPersonId()
@@ -146,7 +146,7 @@ items:
   nameWithType: NSContactActivity.GetActivityPersonName()
   fullName: CRMScript.NetServer.NSContactActivity.GetActivityPersonName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetActivityPersonName()
@@ -166,7 +166,7 @@ items:
   nameWithType: NSContactActivity.GetAssociateFullName()
   fullName: CRMScript.NetServer.NSContactActivity.GetAssociateFullName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAssociateFullName()
@@ -186,7 +186,7 @@ items:
   nameWithType: NSContactActivity.GetAssociateId()
   fullName: CRMScript.NetServer.NSContactActivity.GetAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -206,7 +206,7 @@ items:
   nameWithType: NSContactActivity.GetCategory()
   fullName: CRMScript.NetServer.NSContactActivity.GetCategory()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCategory()
@@ -226,7 +226,7 @@ items:
   nameWithType: NSContactActivity.GetContactId()
   fullName: CRMScript.NetServer.NSContactActivity.GetContactId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -246,7 +246,7 @@ items:
   nameWithType: NSContactActivity.GetDepartment()
   fullName: CRMScript.NetServer.NSContactActivity.GetDepartment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDepartment()
@@ -266,7 +266,7 @@ items:
   nameWithType: NSContactActivity.GetName()
   fullName: CRMScript.NetServer.NSContactActivity.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -286,7 +286,7 @@ items:
   nameWithType: NSContactActivity.GetOrgNr()
   fullName: CRMScript.NetServer.NSContactActivity.GetOrgNr()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOrgNr()
@@ -306,7 +306,7 @@ items:
   nameWithType: NSContactActivity.GetPersonId()
   fullName: CRMScript.NetServer.NSContactActivity.GetPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -326,7 +326,7 @@ items:
   nameWithType: NSContactActivity.GetURL()
   fullName: CRMScript.NetServer.NSContactActivity.GetURL()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetURL()
@@ -346,7 +346,7 @@ items:
   nameWithType: NSContactActivity.SetAction(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetAction(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAction(Integer action)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSContactActivity.SetActionId(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetActionId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActionId(Integer actionId)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSContactActivity.SetActionTime(DateTime)
   fullName: CRMScript.NetServer.NSContactActivity.SetActionTime(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActionTime(DateTime actionTime)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSContactActivity.SetActivityPersonId(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetActivityPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActivityPersonId(Integer activityPersonId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSContactActivity.SetActivityPersonName(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetActivityPersonName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActivityPersonName(String activityPersonName)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSContactActivity.SetAssociateFullName(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetAssociateFullName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateFullName(String associateFullName)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSContactActivity.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSContactActivity.SetCategory(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetCategory(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCategory(String category)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSContactActivity.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetContactId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSContactActivity.SetDepartment(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetDepartment(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDepartment(String department)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSContactActivity.SetName(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSContactActivity.SetOrgNr(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetOrgNr(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOrgNr(String orgNr)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSContactActivity.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSContactActivity.SetPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSContactActivity.SetURL(String)
   fullName: CRMScript.NetServer.NSContactActivity.SetURL(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetURL(String uRL)
