--- a/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSContactAgent.#ctor
   fullName: CRMScript.NetServer.NSContactAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: "\nInitializes a new instance of the NSContactAgent class.\n"
   remarks: 
   syntax: 
     content: NSContactAgent
