--- a/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSContactSummary.GetChats()
   fullName: CRMScript.NetServer.NSContactSummary.GetChats()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChatSummaryItem[] GetChats()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSContactSummary.GetContact()
   fullName: CRMScript.NetServer.NSContactSummary.GetContact()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSContact GetContact()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSContactSummary.GetDocuments()
   fullName: CRMScript.NetServer.NSContactSummary.GetDocuments()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSActivitySummaryItem[] GetDocuments()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSContactSummary.GetFollowups()
   fullName: CRMScript.NetServer.NSContactSummary.GetFollowups()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSActivitySummaryItem[] GetFollowups()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSContactSummary.GetSales()
   fullName: CRMScript.NetServer.NSContactSummary.GetSales()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSSaleSummaryItem[] GetSales()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSContactSummary.GetTickets()
   fullName: CRMScript.NetServer.NSContactSummary.GetTickets()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTicketSummaryItem[] GetTickets()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSContactSummary.SetChats(NSChatSummaryItem[])
   fullName: CRMScript.NetServer.NSContactSummary.SetChats(NSChatSummaryItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetChats(NSChatSummaryItem[] chats)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSContactSummary.SetContact(NSContact)
   fullName: CRMScript.NetServer.NSContactSummary.SetContact(NSContact)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContact(NSContact contact)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSContactSummary.SetDocuments(NSActivitySummaryItem[])
   fullName: CRMScript.NetServer.NSContactSummary.SetDocuments(NSActivitySummaryItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDocuments(NSActivitySummaryItem[] documents)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSContactSummary.SetFollowups(NSActivitySummaryItem[])
   fullName: CRMScript.NetServer.NSContactSummary.SetFollowups(NSActivitySummaryItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFollowups(NSActivitySummaryItem[] followups)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSContactSummary.SetSales(NSSaleSummaryItem[])
   fullName: CRMScript.NetServer.NSContactSummary.SetSales(NSSaleSummaryItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSales(NSSaleSummaryItem[] sales)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSContactSummary.SetTickets((NSTicketSummaryItem[])
   fullName: CRMScript.NetServer.NSContactSummary.SetTickets((NSTicketSummaryItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTickets(NSTicketSummaryItem[] tickets)
