--- a/docs/api-reference/CRMScript.NetServer.NSCountry.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCountry.yml
@@ -74,7 +74,7 @@ items:
   nameWithType: NSCountry.GetAddressLayoutId()
   fullName: CRMScript.NetServer.NSCountry.GetAddressLayoutId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAddressLayoutId()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSCountry.GetCountryId()
   fullName: CRMScript.NetServer.NSCountry.GetCountryId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCountryId()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSCountry.GetCurrencyId()
   fullName: CRMScript.NetServer.NSCountry.GetCurrencyId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCurrencyId()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSCountry.GetDeleted()
   fullName: CRMScript.NetServer.NSCountry.GetDeleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -154,7 +154,7 @@ items:
   nameWithType: NSCountry.GetDialInPrefix()
   fullName: CRMScript.NetServer.NSCountry.GetDialInPrefix()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDialInPrefix()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSCountry.GetDomainName()
   fullName: CRMScript.NetServer.NSCountry.GetDomainName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDomainName()
@@ -194,7 +194,7 @@ items:
   nameWithType: NSCountry.GetDomesticAddressLayoutId()
   fullName: CRMScript.NetServer.NSCountry.GetDomesticAddressLayoutId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDomesticAddressLayoutId()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCountry.GetEnglishName()
   fullName: CRMScript.NetServer.NSCountry.GetEnglishName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEnglishName()
@@ -234,7 +234,7 @@ items:
   nameWithType: NSCountry.GetForeignAddressLayoutId()
   fullName: CRMScript.NetServer.NSCountry.GetForeignAddressLayoutId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetForeignAddressLayoutId()
@@ -254,7 +254,7 @@ items:
   nameWithType: NSCountry.GetImageDescription()
   fullName: CRMScript.NetServer.NSCountry.GetImageDescription()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis is the country flag that is displayed in the CRM client\n"
   syntax: 
     content: String GetImageDescription()
@@ -274,7 +274,7 @@ items:
   nameWithType: NSCountry.GetInterAreaPrefix()
   fullName: CRMScript.NetServer.NSCountry.GetInterAreaPrefix()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetInterAreaPrefix()
@@ -294,7 +294,7 @@ items:
   nameWithType: NSCountry.GetName()
   fullName: CRMScript.NetServer.NSCountry.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -314,7 +314,7 @@ items:
   nameWithType: NSCountry.GetOrgNrText()
   fullName: CRMScript.NetServer.NSCountry.GetOrgNrText()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOrgNrText()
@@ -334,7 +334,7 @@ items:
   nameWithType: NSCountry.GetRank()
   fullName: CRMScript.NetServer.NSCountry.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -354,7 +354,7 @@ items:
   nameWithType: NSCountry.GetThreeLetterISOCountry()
   fullName: CRMScript.NetServer.NSCountry.GetThreeLetterISOCountry()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetThreeLetterISOCountry()
@@ -374,7 +374,7 @@ items:
   nameWithType: NSCountry.GetTooltip()
   fullName: CRMScript.NetServer.NSCountry.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -394,7 +394,7 @@ items:
   nameWithType: NSCountry.GetTwoLetterISOCountry()
   fullName: CRMScript.NetServer.NSCountry.GetTwoLetterISOCountry()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTwoLetterISOCountry()
@@ -414,7 +414,7 @@ items:
   nameWithType: NSCountry.GetZipPrefix()
   fullName: CRMScript.NetServer.NSCountry.GetZipPrefix()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetZipPrefix()
@@ -434,7 +434,7 @@ items:
   nameWithType: NSCountry.SetAddressLayoutId(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetAddressLayoutId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAddressLayoutId(Integer addressLayoutId)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSCountry.SetCountryId(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetCountryId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCountryId(Integer countryId)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSCountry.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetCurrencyId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCurrencyId(Integer currencyId)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSCountry.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSCountry.SetDeleted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSCountry.SetDialInPrefix(String)
   fullName: CRMScript.NetServer.NSCountry.SetDialInPrefix(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDialInPrefix(String dialInPrefix)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSCountry.SetDomainName(String)
   fullName: CRMScript.NetServer.NSCountry.SetDomainName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDomainName(String domainName)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSCountry.SetDomesticAddressLayoutId(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetDomesticAddressLayoutId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDomesticAddressLayoutId(Integer domesticAddressLayoutId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSCountry.SetEnglishName(String)
   fullName: CRMScript.NetServer.NSCountry.SetEnglishName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEnglishName(String englishName)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSCountry.SetForeignAddressLayoutId(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetForeignAddressLayoutId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetForeignAddressLayoutId(Integer foreignAddressLayoutId)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSCountry.SetImageDescription(String)
   fullName: CRMScript.NetServer.NSCountry.SetImageDescription(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis is the country flag that is displayed in the CRM client\n"
   syntax: 
     content: Void SetImageDescription(String imageDescription)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSCountry.SetInterAreaPrefix(String)
   fullName: CRMScript.NetServer.NSCountry.SetInterAreaPrefix(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetInterAreaPrefix(String interAreaPrefix)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSCountry.SetName(String)
   fullName: CRMScript.NetServer.NSCountry.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSCountry.SetOrgNrText(String)
   fullName: CRMScript.NetServer.NSCountry.SetOrgNrText(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOrgNrText(String orgNrText)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSCountry.SetRank(Integer)
   fullName: CRMScript.NetServer.NSCountry.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSCountry.SetThreeLetterISOCountry(String)
   fullName: CRMScript.NetServer.NSCountry.SetThreeLetterISOCountry(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetThreeLetterISOCountry(String threeLetterISOCountry)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSCountry.SetTooltip(String)
   fullName: CRMScript.NetServer.NSCountry.SetTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSCountry.SetTwoLetterISOCountry(String)
   fullName: CRMScript.NetServer.NSCountry.SetTwoLetterISOCountry(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTwoLetterISOCountry(String twoLetterISOCountry)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSCountry.SetZipPrefix(String)
   fullName: CRMScript.NetServer.NSCountry.SetZipPrefix(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetZipPrefix(String zipPrefix)
