--- a/docs/api-reference/CRMScript.NetServer.NSCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredential.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCredential.GetDisplayValue()
   fullName: CRMScript.NetServer.NSCredential.GetDisplayValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayValue()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCredential.GetType()
   fullName: CRMScript.NetServer.NSCredential.GetType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSCredentialType GetType()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCredential.GetValue()
   fullName: CRMScript.NetServer.NSCredential.GetValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetValue()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCredential.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayValue(String displayValue)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCredential.SetType(NSCredentialType)
   fullName: CRMScript.NetServer.NSCredential.SetType(NSCredentialType)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetType(NSCredentialType type)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCredential.SetValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetValue(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValue(String value)
