--- a/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSCredentialType.GetCanCreatePerson()
   fullName: CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanCreatePerson()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSCredentialType.GetDescription()
   fullName: CRMScript.NetServer.NSCredentialType.GetDescription()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value is used in a list of authentication providers that can be chosen by an end user and should be a fairly descriptive text. This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
   syntax: 
     content: String GetDescription()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSCredentialType.GetDisplayType()
   fullName: CRMScript.NetServer.NSCredentialType.GetDisplayType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis will typically be Password for user-name/password scenarios and Active Directory User for AD integration.\n"
   syntax: 
     content: String GetDisplayType()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSCredentialType.GetIsUserNameSupported()
   fullName: CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsUserNameSupported()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSCredentialType.GetType()
   fullName: CRMScript.NetServer.NSCredentialType.GetType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetType()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSCredentialType.GetValueControl()
   fullName: CRMScript.NetServer.NSCredentialType.GetValueControl()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetValueControl()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCredentialType.SetDescription(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDescription(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value is used in a list of authentication providers that can be chosen by an end user and should be a fairly descriptive text. This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
   syntax: 
     content: Void SetDescription(String description)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCredentialType.SetDisplayType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDisplayType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis will typically be Password for user-name/password scenarios and Active Directory User for AD integration.\n"
   syntax: 
     content: Void SetDisplayType(String displayType)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCredentialType.SetType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetType(String type)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCredentialType.SetValueControl(Integer)
   fullName: CRMScript.NetServer.NSCredentialType.SetValueControl(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValueControl(Integer valueControl)
