--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSCredentialsGroup.GetDisplayName()
   fullName: CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSCredentialsGroup.GetName()
   fullName: CRMScript.NetServer.NSCredentialsGroup.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value should not be displayed to the end user!\n"
   syntax: 
     content: String GetName()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCredentialsGroup.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
