--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.GetHeadings()
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String[] GetHeadings()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.GetUsers()
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSCredentialUser[] GetUsers()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.SetHeadings(String[])
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetHeadings(String[] headings)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUsers(NSCredentialUser[] users)
