--- a/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSCriteriaInformation.GetCriteriaArchiveColumns()
   fullName: CRMScript.NetServer.NSCriteriaInformation.GetCriteriaArchiveColumns()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveColumnInfo[] GetCriteriaArchiveColumns()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSCriteriaInformation.GetCriteriaArchiveRows()
   fullName: CRMScript.NetServer.NSCriteriaInformation.GetCriteriaArchiveRows()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThese are the criteria, represented as archive rows.\n"
   syntax: 
     content: NSArchiveListItem[] GetCriteriaArchiveRows()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSCriteriaInformation.GetRestrictionGroups()
   fullName: CRMScript.NetServer.NSCriteriaInformation.GetRestrictionGroups()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveRestrictionGroup[] GetRestrictionGroups()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSCriteriaInformation.GetRestrictions()
   fullName: CRMScript.NetServer.NSCriteriaInformation.GetRestrictions()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveRestrictionInfo[] GetRestrictions()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCriteriaArchiveColumns(NSArchiveColumnInfo[] criteriaArchiveColumns)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCriteriaInformation.SetCriteriaArchiveRows(NSArchiveListItem[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveRows(NSArchiveListItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThese are the criteria, represented as archive rows.\n"
   syntax: 
     content: Void SetCriteriaArchiveRows(NSArchiveListItem[] criteriaArchiveRows)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSCriteriaInformation.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRestrictionGroups(NSArchiveRestrictionGroup[] restrictionGroups)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCriteriaInformation.SetRestrictions(NSArchiveRestrictionInfo[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetRestrictions(NSArchiveRestrictionInfo[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRestrictions(NSArchiveRestrictionInfo[] restrictions)
