--- a/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCsSessionKey.GetKey()
   fullName: CRMScript.NetServer.NSCsSessionKey.GetKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetKey()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCsSessionKey.GetLoginId()
   fullName: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetLoginId()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCsSessionKey.GetUserId()
   fullName: CRMScript.NetServer.NSCsSessionKey.GetUserId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUserId()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCsSessionKey.SetKey(String)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetKey(String key)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCsSessionKey.SetLoginId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLoginId(Integer loginId)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCsSessionKey.SetUserId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetUserId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserId(Integer userId)
