--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSCustomerServiceStartup.GetRecaptchaSiteKey()
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.GetRecaptchaSiteKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value is taken from the web.config file\n"
   syntax: 
     content: String GetRecaptchaSiteKey()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSCustomerServiceStartup.GetTimezoneEnabled()
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.GetTimezoneEnabled()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetTimezoneEnabled()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSCustomerServiceStartup.GetTZOffset()
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.GetTZOffset()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTZOffset()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCustomerServiceStartup.SetRecaptchaSiteKey(String)
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.SetRecaptchaSiteKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value is taken from the web.config file\n"
   syntax: 
     content: Void SetRecaptchaSiteKey(String recaptchaSiteKey)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCustomerServiceStartup.SetTimezoneEnabled(Bool)
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.SetTimezoneEnabled(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTimezoneEnabled(Bool timezoneEnabled)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCustomerServiceStartup.SetTZOffset(Integer)
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.SetTZOffset(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTZOffset(Integer tZOffset)
