--- a/docs/api-reference/CRMScript.NetServer.NSDataRights.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDataRights.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSDataRights.GetColumnsInfo()
   fullName: CRMScript.NetServer.NSDataRights.GetColumnsInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSRelationToOwner[] GetColumnsInfo()
@@ -63,7 +63,7 @@ items:
   nameWithType: NSDataRights.GetRights()
   fullName: CRMScript.NetServer.NSDataRights.GetRights()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSDataRight[] GetRights()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSDataRights.GetRowsInfo()
   fullName: CRMScript.NetServer.NSDataRights.GetRowsInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSEntityName[] GetRowsInfo()
