--- a/docs/api-reference/CRMScript.NetServer.NSDayInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDayInformationListItem.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSDayInformationListItem.GetActivityInformation()
   fullName: CRMScript.NetServer.NSDayInformationListItem.GetActivityInformation()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSActivitySummary GetActivityInformation()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSDayInformationListItem.GetDate()
   fullName: CRMScript.NetServer.NSDayInformationListItem.GetDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetDate()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSDayInformationListItem.GetRedLetterInformation()
   fullName: CRMScript.NetServer.NSDayInformationListItem.GetRedLetterInformation()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSRedLetterSummary GetRedLetterInformation()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSDayInformationListItem.SetActivityInformation(NSActivitySummary)
   fullName: CRMScript.NetServer.NSDayInformationListItem.SetActivityInformation(NSActivitySummary)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActivityInformation(NSActivitySummary activityInformation)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSDayInformationListItem.SetDate(DateTime)
   fullName: CRMScript.NetServer.NSDayInformationListItem.SetDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDate(DateTime date)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSDayInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
   fullName: CRMScript.NetServer.NSDayInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRedLetterInformation(NSRedLetterSummary redLetterInformation)
