--- a/docs/api-reference/CRMScript.Event.Trigger.yml
+++ b/docs/api-reference/CRMScript.Event.Trigger.yml
@@ -107,7 +107,7 @@ items:
   nameWithType: Trigger
   fullName: CRMScript.Event.Trigger
   type: Class
-  summary: ""
+  summary: # TODO
   example: 
 - uid: CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
   commentId: M:CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
@@ -119,7 +119,7 @@ items:
   nameWithType: Trigger.ChatAfterSaveNewMessage()
   fullName: CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -134,7 +134,7 @@ items:
   nameWithType: Trigger.ChatBeforeSaveNewMessage()
   fullName: CRMScript.Event.Trigger.ChatBeforeSaveNewMessage()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -179,7 +179,7 @@ items:
   nameWithType: Trigger.CompactModeInjection()
   fullName: CRMScript.Event.Trigger.CompactModeInjection()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -194,7 +194,7 @@ items:
   nameWithType: Trigger.CustomerCenterAuthentication()
   fullName: CRMScript.Event.Trigger.CustomerCenterAuthentication()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -209,7 +209,7 @@ items:
   nameWithType: Trigger.CustomerSetSubscriptions()
   fullName: CRMScript.Event.Trigger.CustomerSetSubscriptions()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -239,7 +239,7 @@ items:
   nameWithType: Trigger.ImportMailAfterProcessing()
   fullName: CRMScript.Event.Trigger.ImportMailAfterProcessing()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -314,7 +314,7 @@ items:
   nameWithType: Trigger.NewTicketFromCustomerCenter()
   fullName: CRMScript.Event.Trigger.NewTicketFromCustomerCenter()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -329,7 +329,7 @@ items:
   nameWithType: Trigger.NewTicketFromCustomerCenterBeforeSave()
   fullName: CRMScript.Event.Trigger.NewTicketFromCustomerCenterBeforeSave()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
@@ -1515,7 +1515,7 @@ Called when screen is constructed, useful for setting default values into HTML e
   nameWithType: Trigger.TicketReopenedFromCustomerCenter()
   fullName: CRMScript.Event.Trigger.TicketReopenedFromCustomerCenter()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
   example: 
