--- a/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
@@ -62,7 +62,7 @@ items:
   nameWithType: NSAddressSyncData.GetAddress1()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetAddress1()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAddress1()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSAddressSyncData.GetAddress2()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetAddress2()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAddress2()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSAddressSyncData.GetAddress3()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetAddress3()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAddress3()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSAddressSyncData.GetAddressId()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetAddressId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAddressId()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSAddressSyncData.GetAddressType()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetAddressType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAddressType()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSAddressSyncData.GetCity()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetCity()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCity()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSAddressSyncData.GetCounty()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetCounty()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCounty()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSAddressSyncData.GetFormattedAddress()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetFormattedAddress()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFormattedAddress()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSAddressSyncData.GetLatitude()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetLatitude()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetLatitude()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSAddressSyncData.GetLongitude()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetLongitude()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetLongitude()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSAddressSyncData.GetState()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetState()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetState()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSAddressSyncData.GetZipCode()
   fullName: CRMScript.NetServer.NSAddressSyncData.GetZipCode()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetZipCode()
