--- a/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSArchiveColumnData.GetDisplayValue()
   fullName: CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayValue()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSArchiveColumnData.GetLinkHint()
   fullName: CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetLinkHint()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSArchiveColumnData.GetTooltipHint()
   fullName: CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltipHint()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSArchiveColumnData.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetDisplayValue(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayValue(String displayValue)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSArchiveColumnData.SetLinkHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetLinkHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLinkHint(String linkHint)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSArchiveColumnData.SetTooltipHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetTooltipHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltipHint(String tooltipHint)
