--- a/docs/api-reference/CRMScript.NetServer.NSArchiveColumnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveColumnInfo.yml
@@ -64,7 +64,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetCanOrderBy()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetCanOrderBy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanOrderBy()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetCanRestrictBy()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetCanRestrictBy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanRestrictBy()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetDisplayName()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetDisplayName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetDisplayTooltip()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetDisplayTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayTooltip()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetDisplayType()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetDisplayType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayType()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetHeadingIconHint()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetHeadingIconHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetHeadingIconHint()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetIconHint()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetIconHint()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThe icon hint is used in the configuration dialog and other places where we talk about the columns of the archive. The actual heading of the archive may also contain icons in lieu of textual names, the icon hint for that is specified in HeadingIconHint and is a different one.\n"
   syntax: 
     content: String GetIconHint()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetIsVisible()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetIsVisible()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsVisible()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetName()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThe name to be used when requesting the column from a provider, setting restrictions or order by criteria\n"
   syntax: 
     content: String GetName()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetRestrictionListName()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetRestrictionListName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRestrictionListName()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetRestrictionType()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetRestrictionType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRestrictionType()
@@ -367,7 +367,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetDisplayName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -389,7 +389,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetDisplayTooltip(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetDisplayTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayTooltip(String displayTooltip)
@@ -411,7 +411,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetDisplayType(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetDisplayType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayType(String displayType)
@@ -433,7 +433,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetHeadingIconHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetHeadingIconHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nIf this is a nonempty string, the archive header should use this icon and ignore the DisplayName. Otherwise, the DisplayName should be used as the heading.\n"
   syntax: 
     content: Void SetHeadingIconHint(String headingIconHint)
@@ -455,7 +455,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetIconHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetIconHint(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "This icon hint is used in the configuration dialog and other places where we talk about the columns of the archive. The actual heading of the archive may also contain icons in lieu of textual names, the icon hint for that is specified in HeadingIconHint and is a different one.\n"
   syntax: 
     content: Void SetIconHint(String iconHint)
@@ -499,7 +499,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetName(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThe name to be used when requesting the column from a provider, setting restrictions or order by criteria\n"
   syntax: 
     content: Void SetName(String name)
@@ -521,7 +521,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetRestrictionListName(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetRestrictionListName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRestrictionListName(String restrictionListName)
@@ -543,7 +543,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetRestrictionType(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetRestrictionType(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nUse this to retrieve the legal operators for the restriction.\n"
   syntax: 
     content: Void SetRestrictionType(String restrictionType)
@@ -586,7 +586,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetWidth(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetWidth(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nPercent-formatted fields grow and shrink; number-of-characters formatted fields have constant width when the whole archive width changes.\n"
   syntax: 
     content: Void SetWidth(String width)
