--- a/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSArchiveConfiguration.GetArchiveColumnInfo()
   fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveColumnInfo[] GetArchiveColumnInfo()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSArchiveConfiguration.GetArchiveEntityInfo()
   fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSSelectableMDOListItem[] GetArchiveEntityInfo()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSArchiveConfiguration.GetArchiveOrderByInfo()
   fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveOrderByInfo[] GetArchiveOrderByInfo()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSArchiveConfiguration.GetOwnerKeys()
   fullName: CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOwnerKeys()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSArchiveConfiguration.SetOwnerKeys(String)
   fullName: CRMScript.NetServer.NSArchiveConfiguration.SetOwnerKeys(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOwnerKeys(String ownerKeys)
