--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSArchiveListResult.GetRowCount()
   fullName: CRMScript.NetServer.NSArchiveListResult.GetRowCount()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nIf you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a paging-off situation.\n"
   syntax: 
     content: Integer GetRowCount()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSArchiveListResult.GetRows()
   fullName: CRMScript.NetServer.NSArchiveListResult.GetRows()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nSee RowCount for a paging-independent count estimate\n"
   syntax: 
     content: NSArchiveListItem[] GetRows()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSArchiveListResult.SetRowCount(Integer)
   fullName: CRMScript.NetServer.NSArchiveListResult.SetRowCount(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nIf you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a  paging-off situation\n"
   syntax: 
     content: Void SetRowCount(Integer rowCount)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSArchiveListResult.SetRows(NSArchiveListItem[])
   fullName: CRMScript.NetServer.NSArchiveListResult.SetRows(NSArchiveListItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nSee RowCount for a paging-independent count estimate\n"
   syntax: 
     content: Void SetRows(NSArchiveListItem[] rows)
