--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.GetDescription()
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.GetName()
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.GetRank()
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.GetRestrictions()
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSArchiveRestrictionInfo[] GetRestrictions()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetDescription(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetDescription(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetName(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetRank(Integer)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRestrictions(NSArchiveRestrictionInfo[] restrictions)
