--- a/docs/api-reference/CRMScript.NetServer.NSBatchAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchAgent.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSBatchAgent.#ctor
   fullName: CRMScript.NetServer.NSBatchAgent.#ctor
   type: Constructor
-  summary: ""
+  summary: "\nInitializes a new instance of the NSBatchAgent class.\n"
   remarks: 
   syntax: 
     content: NSBatchAgent
