--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.GetContextIdentifier()
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContextIdentifier()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.GetCurrentModel()
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSCategorizationModelDetails GetCurrentModel()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.GetPreviousModel()
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSCategorizationModelDetails GetPreviousModel()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.GetStatus()
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetStatus()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetContextIdentifier(String)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetContextIdentifier(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContextIdentifier(String contextIdentifier)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCurrentModel(NSCategorizationModelDetails currentModel)
@@ -168,7 +168,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPreviousModel(NSCategorizationModelDetails previousModel)
@@ -190,7 +190,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetStatus(String)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetStatus(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStatus(String status)
