--- a/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSChangedData.GetAddedRecords()
   fullName: CRMScript.NetServer.NSChangedData.GetAddedRecords()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChangedDataItem[] GetAddedRecords()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSChangedData.GetDeletedRecords()
   fullName: CRMScript.NetServer.NSChangedData.GetDeletedRecords()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChangedDataItem[] GetDeletedRecords()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSChangedData.GetUpdatedRecords()
   fullName: CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSChangedDataItem[] GetUpdatedRecords()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSChangedData.SetAddedRecords(NSChangedDataItem[])
   fullName: CRMScript.NetServer.NSChangedData.SetAddedRecords(NSChangedDataItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAddedRecords(NSChangedDataItem[] addedRecords)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSChangedData.SetDeletedRecords(NSChangedDataItem[])
   fullName: CRMScript.NetServer.NSChangedData.SetDeletedRecords(NSChangedDataItem[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeletedRecords(NSChangedDataItem[] deletedRecords)
