--- a/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSConsentPerson.GetComment()
   fullName: CRMScript.NetServer.NSConsentPerson.GetComment()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetComment()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSConsentPerson.GetConsentPersonId()
   fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetConsentPersonId()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSConsentPerson.GetConsentPurpose()
   fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSConsentPurpose GetConsentPurpose()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSConsentPerson.GetConsentSource()
   fullName: CRMScript.NetServer.NSConsentPerson.GetConsentSource()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSConsentSource GetConsentSource()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSConsentPerson.GetLegalBase()
   fullName: CRMScript.NetServer.NSConsentPerson.GetLegalBase()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSLegalBase GetLegalBase()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSConsentPerson.GetPersonId()
   fullName: CRMScript.NetServer.NSConsentPerson.GetPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSConsentPerson.SetComment(String)
   fullName: CRMScript.NetServer.NSConsentPerson.SetComment(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetComment(String comment)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSConsentPerson.SetConsentPersonId(Integer)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPersonId(Integer consentPersonId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPurpose(NSConsentPurpose consentPurpose)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSConsentPerson.SetConsentSource(NSConsentSource)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentSource(NSConsentSource)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentSource(NSConsentSource consentSource)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSConsentPerson.SetLegalBase(NSLegalBase)
   fullName: CRMScript.NetServer.NSConsentPerson.SetLegalBase(NSLegalBase)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLegalBase(NSLegalBase legalBase)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSConsentPerson.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSConsentPerson.SetPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
