--- a/docs/api-reference/CRMScript.NetServer.NSConsentPurpose.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentPurpose.yml
@@ -64,7 +64,7 @@ items:
   nameWithType: NSConsentPurpose.GetActive()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetActive()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetActive()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSConsentPurpose.GetConsentPurposeId()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetConsentPurposeId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetConsentPurposeId()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSConsentPurpose.GetConsentText()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetConsentText()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConsentText()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSConsentPurpose.GetDeleted()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetDeleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSConsentPurpose.GetFormText()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetFormText()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFormText()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSConsentPurpose.GetKey()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetKey()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetKey()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSConsentPurpose.GetName()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSConsentPurpose.GetPrivacyStatementDesc()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetPrivacyStatementDesc()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPrivacyStatementDesc()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSConsentPurpose.GetPrivacyStatementUrl()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetPrivacyStatementUrl()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPrivacyStatementUrl()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSConsentPurpose.GetRank()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSConsentPurpose.GetTooltip()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -284,7 +284,7 @@ items:
   nameWithType: NSConsentPurpose.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetUpdatedBy()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAssociate GetUpdatedBy()
@@ -304,7 +304,7 @@ items:
   nameWithType: NSConsentPurpose.GetUpdatedDate()
   fullName: CRMScript.NetServer.NSConsentPurpose.GetUpdatedDate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetUpdatedDate()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSConsentPurpose.SetActive(Integer)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetActive(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetActive(Integer active)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSConsentPurpose.SetConsentPurposeId(Integer)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetConsentPurposeId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentPurposeId(Integer consentPurposeId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSConsentPurpose.SetConsentText(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetConsentText(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConsentText(String consentText)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSConsentPurpose.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetDeleted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSConsentPurpose.SetFormText(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetFormText(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFormText(String formText)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSConsentPurpose.SetKey(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetKey(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetKey(String key)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSConsentPurpose.SetName(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSConsentPurpose.SetPrivacyStatementDesc(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetPrivacyStatementDesc(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPrivacyStatementDesc(String privacyStatementDesc)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSConsentPurpose.SetPrivacyStatementUrl(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetPrivacyStatementUrl(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPrivacyStatementUrl(String privacyStatementUrl)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSConsentPurpose.SetRank(Integer)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSConsentPurpose.SetTooltip(String)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSConsentPurpose.SetUpdatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetUpdatedBy(NSAssociate)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(NSAssociate updatedBy)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSConsentPurpose.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSConsentPurpose.SetUpdatedDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
