--- a/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSContactPersonId.GetContactId()
   fullName: CRMScript.NetServer.NSContactPersonId.GetContactId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -61,7 +61,7 @@ items:
   nameWithType: NSContactPersonId.GetPersonId()
   fullName: CRMScript.NetServer.NSContactPersonId.GetPersonId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -80,7 +80,7 @@ items:
   nameWithType: NSContactPersonId.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSContactPersonId.SetContactId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer id)
@@ -101,7 +101,7 @@ items:
   nameWithType: NSContactPersonId.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSContactPersonId.SetPersonId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer id)
