--- a/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSCredentialUser.GetCanCreatePerson()
   fullName: CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetCanCreatePerson()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSCredentialUser.GetColumns()
   fullName: CRMScript.NetServer.NSCredentialUser.GetColumns()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String[] GetColumns()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSCredentialUser.GetDisplayValue()
   fullName: CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value needs to be applied to the Credential.DisplayValue field.\n"
   syntax: 
     content: String GetDisplayValue()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSCredentialUser.GetValue()
   fullName: CRMScript.NetServer.NSCredentialUser.GetValue()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value needs to be applied to the Credential.Value field\n"
   syntax: 
     content: String GetValue()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCredentialUser.SetColumns(String[])
   fullName: CRMScript.NetServer.NSCredentialUser.SetColumns(String[])
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetColumns(String[] columns)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSCredentialUser.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSCredentialUser.SetDisplayValue(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value needs to be applied to the Credential.DisplayValue field.\n"
   syntax: 
     content: Void SetDisplayValue(String displayValue)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCredentialUser.SetValue(String)
   fullName: CRMScript.NetServer.NSCredentialUser.SetValue(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: "\nThis value needs to be applied to the Credential.Value field\n"
   syntax: 
     content: Void SetValue(String value)
