--- a/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSCsFeatureToggle.GetName()
   fullName: CRMScript.NetServer.NSCsFeatureToggle.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSCsFeatureToggle.GetState()
   fullName: CRMScript.NetServer.NSCsFeatureToggle.GetState()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetState()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCsFeatureToggle.SetName(String)
   fullName: CRMScript.NetServer.NSCsFeatureToggle.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCsFeatureToggle.SetState(Bool)
   fullName: CRMScript.NetServer.NSCsFeatureToggle.SetState(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetState(Bool state)
