--- a/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSCurrencyEntity.GetCurrencyId()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCurrencyId()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSCurrencyEntity.GetDeleted()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSCurrencyEntity.GetName()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetName()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSCurrencyEntity.GetRank()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetRank()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSCurrencyEntity.GetRate()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetRate()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetRate()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSCurrencyEntity.GetTooltip()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSCurrencyEntity.GetUnits()
   fullName: CRMScript.NetServer.NSCurrencyEntity.GetUnits()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Float GetUnits()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCurrencyEntity.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCurrencyId(Integer currencyId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCurrencyEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetDeleted(Bool)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCurrencyEntity.SetName(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetName(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCurrencyEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetRank(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCurrencyEntity.SetRate(Float)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRate(Float rate)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSCurrencyEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetTooltip(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSCurrencyEntity.SetUnits(Float)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUnits(Float units)
