--- a/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
@@ -54,7 +54,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetConfig()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetConfig()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetConfig()
@@ -74,7 +74,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetCustConfigId()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetCustConfigId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCustConfigId()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetCustLangId()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetCustLangId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCustLangId()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetRegistered()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetRegistered()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetRegistered()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetRegisteredAssociateId()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetRegisteredAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRegisteredAssociateId()
@@ -154,7 +154,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetType()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetType()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetType()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetUpdated()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetUpdated()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetUpdated()
@@ -194,7 +194,7 @@ items:
   nameWithType: NSCustomerCenterConfig.GetUpdatedAssociateId()
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.GetUpdatedAssociateId()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUpdatedAssociateId()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetConfig(String)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetConfig(String)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetConfig(String config)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetCustConfigId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetCustConfigId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustConfigId(Integer custConfigId)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetCustLangId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetCustLangId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustLangId(Integer custLangId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegistered(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegisteredAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegisteredAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRegisteredAssociateId(Integer registeredAssociateId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetType(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetType(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetType(Integer type)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegiSetUpdated(DateTime)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegiSetUpdated(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdated(DateTime updated)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetUpdatedAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetUpdatedAssociateId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedAssociateId(Integer updatedAssociateId)
